--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -3,7 +3,7 @@
 ## 一
 
 1. 我
-2. 先生、女士、同志
+2. ~ 先生、女士、同志
 3. 学生
 4. 公司职员
 5. 你、您
@@ -11,7 +11,7 @@
 7. 不、不是
 8. 银行职员
 9. 医生
-10. 他、她、那个人
+10. 他、她、那个人 （礼貌）
 11. 哪位 （礼貌）
 12. 大学
 13. 樱花大学（虚构）
