--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -104,3 +104,124 @@
 44. 不是
 45. 那个 ~ （略远些）
 46. 那个 ~ （远）
+
+## 三
+
+1. 这里
+2. 食堂
+3. 升降电梯
+4. 哪里（远）
+5. 新大阪
+6. 厕所
+7. 洗手间
+8. 哪里
+9. 会议室
+10. 办事处
+11. 哪边（礼貌）
+12. 那边（礼貌）
+13. 国家、故乡
+14. 鞋
+15. 意大利
+16. 多少钱
+17. 万
+18. 千
+19. 百
+20. ~ 日元
+21. 请给我 ~
+22. 请给我这个
+23. 欢迎光临
+24. 对不起
+25. 谢谢
+26. 葡萄酒
+27. 销售柜台
+28. 底下
+29. ~ 层
+30. 几层
+31. 请让我看一下
+32. 那么
+33. 教室
+34. 广岛
+35. 接待处
+36. 那里（离听话人近）
+37. 自动贩卖机
+38. 大厅、休息室
+39. 这边（礼貌）
+40. 那边（礼貌）
+41. 法国
+42. 领带
+43. 楼梯
+44. 自动扶梯
+45. 电话
+46. 房间
+47. 家
+48. 大阪
+49. 公司
+50. 曼谷
+51. 柏林
+52. 雅加达
+53. 瑞士
+
+## 四
+
+1. 现在
+2. ~ 点
+3. ~ 分
+4. 每天早晨
+5. 起床
+6. 昨天
+7. 学习(V3)
+8. 几点
+9. 几分
+10. 纽约
+11. 上午
+12. 休息、休假
+13. 星期几
+14. 星期六
+15. ~ 和 ~
+16. 星期天
+17. 苹果银行（虚构）
+18. 从 ~
+19. 到 ~
+20. 每天晚上
+21. 睡觉（V2）
+22. 每天
+23. 早晨
+24. 下午
+25. 工作、劳动（V1）
+26. 那边、你那边（礼貌）
+27. 明日香（虚构的日本餐馆）
+28. 号码
+29. 几号
+30. 半
+31. 九点半
+32. 星期三
+33. 午休
+34. 星期一
+35. 星期五
+36. 明天
+37. 前天
+38. 东京
+39. 北京
+40. 伦敦
+41. 洛杉矶
+42. 今天
+43. 星期二
+44. 会议
+45. 考试
+46. 银行
+47. 邮局
+48. 百货商店
+49. 图书馆
+50. 今晚
+51. 白天
+52. 休息
+53. 晚上
+54. 后天
+55. 今天早上
+56. 大和美术馆（虚构）
+57. 绿色图书馆（虚构）
+58. 星期四
+59. 结束（V1）
+60. 电影
+61. 够辛苦的啊。够累人的啊
+62. 美术馆
