--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -1,6 +1,6 @@
 # 仅汉字
 
-## 一
+## いち
 
 1. 我
 2. ~ 先生、女士、同志
@@ -56,7 +56,7 @@
 52. 您的名字是什么
 53. 动力电器公司（虚构的公司）
 
-## 二
+## に
 
 1. 这
 2. 字典
@@ -105,7 +105,7 @@
 45. 那个 ~ （略远些）
 46. 那个 ~ （远）
 
-## 三
+## さん
 
 1. 这里
 2. 食堂
@@ -161,7 +161,7 @@
 52. 雅加达
 53. 瑞士
 
-## 四
+## よん
 
 1. 现在
 2. ~ 点
@@ -225,3 +225,63 @@
 60. 电影
 61. 够辛苦的啊。够累人的啊
 62. 美术馆
+
+## じゅうに
+
+1. 雨
+2. 北海道
+3. 比 ~
+4. 夏天
+5. 最
+6. 晚会、派对
+7. ~ 得多
+8. 机场
+9. 哪一个
+10. 快、早
+11. 慢
+12. 海
+13. 两个都 ~
+14. 天妇罗
+15. 祗园祭
+16. 我回来了。
+17. 回来啦。
+18. 庙会、庆典、节庆
+19. 哇、人好多啊！
+20. 我累了。
+21. 雪
+22. 世界
+23. 天气
+24. 凉快
+25. 冬天
+26. 暖和、温
+27. 多
+28. 人多。
+29. 简单
+30. 阴
+31. 辣
+32. 饭店
+33. 重
+34. 牛肉
+35. 鸡肉
+36. 猪肉
+37. 香港
+38. 新加坡
+39. 近
+40. 甜
+41. 春天
+42. 秋天
+43. 初次
+44. 寿司
+45. 插花
+46. 柠檬
+47. 红叶
+48. 轻
+49. ABC超市（虚构）
+50. 日本超市（虚构）
+51. 少
+52. 人少。
+53. 远
+54. 生鱼片
+55. 鸡素烧
+56. 咖啡好。
+57. 季节
