feat: add error

--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -12,7 +12,7 @@
 8. 银行职员
 9. 医生
 10. 他、她、那个人 （礼貌）
-11. 哪位 （礼貌）
+11. 哪位 （礼貌）（**2次**）
 12. 大学
 13. 樱花大学（虚构）
 14. 老师、先生
@@ -27,7 +27,7 @@
 23. 是从 ~ 来的
 24. 是从美国来的
 25. 请多关照
-26. 中国
+26. 中国（**2次**）
 27. ~ 人
 28. 中国人
 29. 教师
@@ -40,19 +40,19 @@
 36. 8岁
 37. 多大岁数（礼貌）
 38. 日本
-39. 英国
+39. 英国（**1次**）
 40. 泰国
 41. 德国
 42. 亚洲研究中心
 43. 研究人员
 44. 神户
-45. 医院
+45. 医院（**2次**）
 46. 神户医院
 47. 巴西航空
 48. 印度
 49. 韩国
 50. 印度尼西亚
-51. 对不起、请问
+51. 对不起、请问（**1次**）
 52. 您的名字是什么
 53. 动力电器公司（虚构的公司）
 
@@ -67,7 +67,7 @@
 7. 是的
 8. 是这（那）样
 9. 笔记本
-10. 记事本
+10. 记事本（**1次**）
 11. 什么
 12. 名片
 13. 杂志
@@ -84,12 +84,12 @@
 24. 谢谢
 25. 桌子
 26. 报纸
-27. 自动铅笔
+27. 自动铅笔（**2次**）
 28. 汽车
 29. 书
 30. 日语
 31. ~ 语
-32. 电视
+32. 电视（**2次**）
 33. 钟表
 34. 收音机
 35. 照相机
@@ -229,12 +229,12 @@
 ## じゅうに
 
 1. 雨
-2. 北海道
+2. 北海道 （**1次**）
 3. 比 ~
 4. 夏天
 5. 最
 6. 晚会、派对
-7. ~ 得多
+7. ~ 得多 （**1次**）
 8. 机场
 9. 哪一个
 10. 快、早
@@ -246,42 +246,42 @@
 16. 我回来了。
 17. 回来啦。
 18. 庙会、庆典、节庆
-19. 哇、人好多啊！
-20. 我累了。
+19. 哇、人好多啊！（**1次**）
+20. 我累了。（**1次**）
 21. 雪
 22. 世界
 23. 天气
-24. 凉快
+24. 凉快（**1次**）
 25. 冬天
-26. 暖和、温
-27. 多
-28. 人多。
+26. 暖和、温（**1次**）
+27. 多（**1次**）
+28. 人多。（**1次**）
 29. 简单
 30. 阴
-31. 辣
-32. 饭店
+31. 辣（**1次**）
+32. 饭店、宾馆（**1次**）
 33. 重
 34. 牛肉
 35. 鸡肉
-36. 猪肉
-37. 香港
+36. 猪肉（**1次**）
+37. 香港（**1次**）
 38. 新加坡
-39. 近
+39. 近（**1次**）
 40. 甜
-41. 春天
-42. 秋天
+41. 春天（**1次**）
+42. 秋天（**1次**）
 43. 初次
 44. 寿司
 45. 插花
 46. 柠檬
-47. 红叶
-48. 轻
+47. 红叶（**1次**）
+48. 轻（**1次**）
 49. ABC超市（虚构）
-50. 日本超市（虚构）
-51. 少
+50. 日本超市（虚构）（**1次**）
+51. 少（**1次**）
 52. 人少。
-53. 远
-54. 生鱼片
-55. 鸡素烧
-56. 咖啡好。
+53. 远（**1次**）
+54. 生鱼片、刺身（**1次**）
+55. 鸡素烧（**1次**）
+56. 咖啡好。（**1次**）
 57. 季节
