--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -226,6 +226,72 @@
 61. 够辛苦的啊。够累人的啊
 62. 美术馆
 
+## はし
+
+1. 樱花
+2. 漂亮（的）
+3. 富士山
+4. 贵、高（的）
+5. 山
+6. 热闹（的）
+7. 有名（的）
+8. 冷
+9. 非常（得）
+10. 上海
+11. 太 ~ （于否定一起使用）
+12. 宿舍
+13. 怎么样
+14. 旧（的）
+15. 方便（的）
+16. ~ ，但是 ~
+17. 很久但很方便
+18. 什么样的 ~
+19. 于是
+20. 有意思（的）
+21. 大（的）
+22. 《七武士》（黑泽明导演的电影）
+23. 该告辞了。
+24. 生活
+25. 愉快、高兴（的）
+26. 工作
+27. 嗯。（是这样啊）
+28. 忙（的）
+29. 已经 ~ 了吧
+30. 一杯、一杯
+31. 再来一杯 ~ 怎么样？
+32. 【不】、已经够了，谢谢
+33. 又、再
+34. 请再来。
+35. 好（的）
+36. 坏（的）
+37. 健康的
+38. 好吃、美味（的）
+39. 市镇、街道
+40. 安静（的）
+41. 亲切（的）
+42. 热（的）
+43. 有时间、有空儿
+44. 新、新鲜（的）
+45. 容易、温柔（的）
+46. 英俊（的）、美男子
+47. 餐厅
+48. 便宜（的）
+49. 低、矮（的）
+50. 食物
+51. 蓝色（的）
+52. 凉（的）
+53. 特别好（的）
+54. 你身体好吗？
+55. 难（的）
+56. 红色（的）
+57. 白色（的）
+58. 黑色（的）
+59. 金阁寺
+60. 地方
+61. 长崎
+62. 奈良公园
+63. 小（的）
+
 ## じゅうに
 
 1. 雨
