feat: add error

--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -110,7 +110,7 @@
 1. 这里
 2. 食堂
 3. 升降电梯
-4. 哪里（远）
+4. 那里（远）
 5. 新大阪
 6. 厕所
 7. 洗手间
@@ -129,7 +129,7 @@
 20. ~ 日元
 21. 请给我 ~
 22. 请给我这个
-23. 欢迎光临
+23. 欢迎光临 （**1次**）
 24. 对不起
 25. 谢谢
 26. 葡萄酒
@@ -139,12 +139,12 @@
 30. 几层
 31. 请让我看一下
 32. 那么
-33. 教室
+33. 教室 （**1次**）
 34. 广岛
-35. 接待处
+35. 接待处 （**1次**）
 36. 那里（离听话人近）
 37. 自动贩卖机
-38. 大厅、休息室
+38. 大厅、休息室 （**1次**）
 39. 这边（礼貌）
 40. 那边（礼貌）
 41. 法国
@@ -158,7 +158,7 @@
 49. 公司
 50. 曼谷
 51. 柏林
-52. 雅加达
+52. 雅加达 （**1次**）
 53. 瑞士
 
 ## よん
@@ -167,19 +167,19 @@
 2. ~ 点
 3. ~ 分
 4. 每天早晨
-5. 起床
+5. 起床 (V1)
 6. 昨天
-7. 学习(V3)
+7. 学习 (V3)（**1次**）
 8. 几点
 9. 几分
 10. 纽约
-11. 上午
+11. 上午 （**1次**）
 12. 休息、休假
 13. 星期几
 14. 星期六
 15. ~ 和 ~
 16. 星期天
-17. 苹果银行（虚构）
+17. 苹果银行（虚构）（**1次**）
 18. 从 ~
 19. 到 ~
 20. 每天晚上
@@ -190,7 +190,7 @@
 25. 工作、劳动（V1）
 26. 那边、你那边（礼貌）
 27. 明日香（虚构的日本餐馆）
-28. 号码
+28. 号码（**1次**）
 29. 几号
 30. 半
 31. 九点半
@@ -200,18 +200,18 @@
 35. 星期五
 36. 明天
 37. 前天
-38. 东京
+38. 东京（**1次**）
 39. 北京
 40. 伦敦
 41. 洛杉矶
-42. 今天
+42. 今天（**1次**）
 43. 星期二
 44. 会议
 45. 考试
 46. 银行
-47. 邮局
-48. 百货商店
-49. 图书馆
+47. 邮局（**1次**）
+48. 百货商店（**1次**）
+49. 图书馆（**1次**）
 50. 今晚
 51. 白天
 52. 休息
@@ -223,8 +223,8 @@
 58. 星期四
 59. 结束（V1）
 60. 电影
-61. 够辛苦的啊。够累人的啊
-62. 美术馆
+61. 够辛苦的啊。够累人的啊（**1次**）
+62. 美术馆（**1次**）
 
 ## はし
 
