--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -139,7 +139,7 @@
 30. 几层
 31. 请让我看一下
 32. 那么
-33. 教室 （**1次**）
+33. 教室 （**2次**）
 34. 广岛
 35. 接待处 （**1次**）
 36. 那里（离听话人近）
@@ -169,7 +169,7 @@
 4. 每天早晨
 5. 起床 (V1)
 6. 昨天
-7. 学习 (V3)（**1次**）
+7. 学习 (V3)（**2次**）
 8. 几点
 9. 几分
 10. 纽约
@@ -179,7 +179,7 @@
 14. 星期六
 15. ~ 和 ~
 16. 星期天
-17. 苹果银行（虚构）（**1次**）
+17. 苹果银行（虚构）（**2次**）
 18. 从 ~
 19. 到 ~
 20. 每天晚上
@@ -190,7 +190,7 @@
 25. 工作、劳动（V1）
 26. 那边、你那边（礼貌）
 27. 明日香（虚构的日本餐馆）
-28. 号码（**1次**）
+28. 号码（**2次**）
 29. 几号
 30. 半
 31. 九点半
@@ -204,14 +204,14 @@
 39. 北京
 40. 伦敦
 41. 洛杉矶
-42. 今天（**1次**）
+42. 今天（**2次**）
 43. 星期二
 44. 会议
 45. 考试
 46. 银行
 47. 邮局（**1次**）
 48. 百货商店（**1次**）
-49. 图书馆（**1次**）
+49. 图书馆（**2次**）
 50. 今晚
 51. 白天
 52. 休息
@@ -224,7 +224,131 @@
 59. 结束（V1）
 60. 电影
 61. 够辛苦的啊。够累人的啊（**1次**）
-62. 美术馆（**1次**）
+62. 美术馆（**2次**）
+
+## ご
+
+1. 京都
+2. 去（V1）
+3. 出租车
+4. 回（V1）
+5. 家族、家里人
+6. 来（V3）
+7. 奈良
+8. 新干线
+9. 什么时候
+10. 几月
+11. 几号
+12. 生日
+13. 电车
+14. 甲子园
+15. 非常感谢。
+16. 别客气。
+17. 第 \- 站台
+18. 下一个
+19. 慢车
+20. 急行（快车）
+21. 特快、特急车
+22. 超市 super
+23. 公共汽车 bus
+24. 地铁
+25. 自行车
+26. 朋友
+27. 下周
+28. 上个月
+29. 这个月
+30. 上周
+31. 学校
+32. 飞机
+33. 九州
+34. 船
+35. 车站
+36. 走路（连语）
+37. 她、女朋友
+38. 他、男朋友
+39. 人
+40. 一个人、自己（副词）
+41. 3号
+42. 14号
+43. 明年
+44. 下个月
+45. 这周
+46. 去年
+47. 几年
+48. 大阪城
+49. 六号
+50. 十号
+51. 九号
+52. 一号
+53. 是啊。
+54. 八号
+55. 四号
+56. 二号
+57. 五号
+58. 七号
+59. 二十号
+60. 二十四号
+61. 今年
+
+## ろく
+
+1. 读（V1）
+2. 买（V1）
+3. 一起（副词）
+4. 一会儿、一点儿（副词）
+5. 酒、日本酒
+6. 喝（V1）
+7. 什么
+8. 吃（V2）
+9. 面包（葡 pao）
+10. 鸡蛋
+11. 做、干（V3）
+12. 然后
+13. 看（V2）
+14. 墨西哥
+15. 好啊。
+16. 见面（V1）
+17. 和朋友见面。
+18. 明白了。
+19. 什么（事儿）？
+20. 看花、赏花（名词）
+21. 那【明天】见。
+22. 水果
+23. 肉
+24. 蔬菜
+25. 足球
+26. 录像带、录像机 video
+27. 红茶
+28. 店
+29. 茶、日本茶
+30. 听、问（V1）
+31. 水
+32. 信
+33. 写（V1）
+34. 照片
+35. 照相（V1）
+36. 照照片。
+37. 香烟
+38. 吸、抽（烟）（V1）
+39. 抽烟。
+40. 果汁 juice
+41. 鱼
+42. 报告、小作文 report
+43. 庭院、院子
+44. 午饭
+45. 牛奶
+46. 作业
+47. 米饭、饭
+48. 啤酒
+49. 总是、经常
+50. 每日屋（虚构的超市）
+51. 有时
+52. 法国屋（虚构的超市）
+53. 大阪百货商店（虚构的百货商店）
+54. 鹤屋（虚构的餐厅）
+55. 网球
+56. 早饭
+57. 晚饭
 
 ## はし
 
