--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -228,9 +228,9 @@
 
 ## ご
 
-1. 京都
+1. 京都（**1次**）
 2. 去（V1）
-3. 出租车
+3. 出租车（**1次**）
 4. 回（V1）
 5. 家族、家里人
 6. 来（V3）
@@ -242,15 +242,15 @@
 12. 生日
 13. 电车
 14. 甲子园
-15. 非常感谢。
-16. 别客气。
+15. 非常感谢。（过去式）
+16. 别客气。（**1次**）
 17. 第 \- 站台
 18. 下一个
-19. 慢车
-20. 急行（快车）
-21. 特快、特急车
-22. 超市 super
-23. 公共汽车 bus
+19. 慢车（**1次**）
+20. 急行（快车）（**1次**）
+21. 特快、特急车（**1次**）
+22. 超市 super（**1次**）
+23. 公共汽车 bus（**1次**）
 24. 地铁
 25. 自行车
 26. 朋友
@@ -294,13 +294,13 @@
 
 1. 读（V1）
 2. 买（V1）
-3. 一起（副词）
-4. 一会儿、一点儿（副词）
+3. 一起（副词）（**1次**）
+4. 一会儿、一点儿（副词）（**1次**）
 5. 酒、日本酒
 6. 喝（V1）
 7. 什么
 8. 吃（V2）
-9. 面包（葡 pao）
+9. 面包（葡 pao）（**1次**）
 10. 鸡蛋
 11. 做、干（V3）
 12. 然后
@@ -316,10 +316,10 @@
 22. 水果
 23. 肉
 24. 蔬菜
-25. 足球
-26. 录像带、录像机 video
+25. 足球（**1次**）
+26. 录像带、录像机 video（**1次**）
 27. 红茶
-28. 店
+28. 店（**1次**）
 29. 茶、日本茶
 30. 听、问（V1）
 31. 水
@@ -337,7 +337,7 @@
 43. 庭院、院子
 44. 午饭
 45. 牛奶
-46. 作业
+46. 作业（**1次**）
 47. 米饭、饭
 48. 啤酒
 49. 总是、经常
@@ -345,7 +345,7 @@
 51. 有时
 52. 法国屋（虚构的超市）
 53. 大阪百货商店（虚构的百货商店）
-54. 鹤屋（虚构的餐厅）
+54. 鹤屋（虚构的餐厅）（**1次**）
 55. 网球
 56. 早饭
 57. 晚饭
