--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -475,3 +475,50 @@
 55. 鸡素烧（**1次**）
 56. 咖啡好。（**1次**）
 57. 季节
+
+## じゅうさん
+
+1. 想要(A1)
+2. 暑假
+3. 冲绳
+4. 累(V2)
+5. 很（累人），不好的状态(A2)
+6. 周末
+7. 美术
+8. 寒假
+9. 哪里（表不确定的某个地方）
+10. 滑雪
+11. 分别
+12. 订货（N）
+13. 您点什么？
+14. 套餐
+15. 牛肉盖饭
+16. 稍微
+17. 请稍等。
+18. です的礼貌用语
+19. 结婚（V3）
+20. 玩、玩耍（V1）
+21. 宽（A1）
+22. 迎接（V2）
+23. 迎接朋友。
+24. 散步（V3）
+25. 在公园散步。
+26. 买东西（V3）
+27. 吃饭、用餐(V3)
+28. 河流
+29. 钓鱼（N）
+30. 游泳（V1）
+31. 游泳池
+32. 在泳池里游泳。
+33. ~ 左右（表时间）
+34. 两点左右。
+35. 窄（A1）
+36. 喉咙
+37. 干、渴（V1）
+38. 口渴。
+39. 什么（不确定是什么东西）
+40. 就这样干吧。
+41. 肚子
+42. 空、饿（V1）
+43. 肚子饿。
+44. 新年
