--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -350,6 +350,61 @@
 56. 早饭
 57. 晚饭
 
+## なな
+
+1. 电脑
+2. 花
+3. 给、给出（V2）
+4. 得到（V1）
+5. 电子邮件
+6. 再见
+7. 贺年卡
+8. 已经
+9. 已经6点了啊。
+10. 车票
+11. 还、尚未
+12. 现在（马上去做某事）
+13. 欢迎。
+14. 请进。
+15. 打扰了。
+16. ~ 怎么样？
+17. 我开动了。
+18. 我吃好了。
+19. 勺子
+20. ~ 真棒啊。
+21. 筷子
+22. 叉子
+23. 刀子
+24. 西班牙
+25. 行李、包裹
+26. 寄、送（V1）
+27. 礼物
+28. 纸
+29. 切、剪（V1）
+30. 剪刀
+31. 手
+32. 手机
+33. 打孔机
+34. 透明胶带
+35. 订书机
+36. 橡皮
+37. 借给、借出（V1）
+38. 借钱给小李
+39. 借入（V2）
+40. 向小王借书
+41. 教、告诉（V2）
+42. 教学生日语
+43. 学习、学进来（V1）
+44. （自己的）母亲
+45. （自己的）父亲
+46. 衬衫
+47. 打（电话）（V2）
+48. 钱
+49. （别人的）母亲
+50. （别人的）父亲
+51. 圣诞节
+52. 圣诞贺卡
+
 ## はし
 
 1. 樱花
