--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -408,68 +408,68 @@
 ## はし
 
 1. 樱花
-2. 漂亮（的）
+2. 漂亮 (A2)
 3. 富士山
-4. 贵、高（的）
+4. 贵、高 (A1)
 5. 山
-6. 热闹（的）
-7. 有名（的）
+6. 热闹 (A2)
+7. 有名 (A2)
 8. 冷
 9. 非常（得）
 10. 上海
 11. 太 ~ （于否定一起使用）
 12. 宿舍
 13. 怎么样
-14. 旧（的）
-15. 方便（的）
+14. 旧 (A1)
+15. 方便 (A2)（**1次**）
 16. ~ ，但是 ~
 17. 很久但很方便
 18. 什么样的 ~
-19. 于是
-20. 有意思（的）
-21. 大（的）
+19. 于是（**1次**）
+20. 有意思 (A1)
+21. 大 (A1)
 22. 《七武士》（黑泽明导演的电影）
 23. 该告辞了。
-24. 生活
-25. 愉快、高兴（的）
+24. 生活（**1次**）
+25. 愉快、高兴 (A1)
 26. 工作
 27. 嗯。（是这样啊）
-28. 忙（的）
+28. 忙 (A1)
 29. 已经 ~ 了吧
 30. 一杯、一杯
 31. 再来一杯 ~ 怎么样？
-32. 【不】、已经够了，谢谢
-33. 又、再
+32. 【不】、已经够了，谢谢（**1次**）
+33. 又、再（**1次**）
 34. 请再来。
-35. 好（的）
-36. 坏（的）
-37. 健康的
-38. 好吃、美味（的）
+35. 好 (A1)（**1次**）
+36. 坏 (A1)（**1次**）
+37. 健康、元气（A2）（**1次**）
+38. 好吃、美味 (A1)
 39. 市镇、街道
-40. 安静（的）
-41. 亲切（的）
-42. 热（的）
+40. 安静 (A2)（**1次**）
+41. 亲切 (A2)
+42. 热 (A1)
 43. 有时间、有空儿
-44. 新、新鲜（的）
-45. 容易、温柔（的）
-46. 英俊（的）、美男子
+44. 新、新鲜 (A1)
+45. 容易、温柔 (A1)
+46. 英俊、美男子 (A2)
 47. 餐厅
-48. 便宜（的）
-49. 低、矮（的）
+48. 便宜 (A1)（**1次**）
+49. 低、矮 (A1)（**1次**）
 50. 食物
-51. 蓝色（的）
-52. 凉（的）
-53. 特别好（的）
+51. 蓝色 (A1)
+52. 凉 (A1)（**1次**）
+53. 特别好 (A2)（**1次**）
 54. 你身体好吗？
-55. 难（的）
-56. 红色（的）
-57. 白色（的）
-58. 黑色（的）
-59. 金阁寺
-60. 地方
-61. 长崎
+55. 难 (A1)
+56. 红色 (A1)
+57. 白色 (A1)
+58. 黑色 (A1)
+59. 金阁寺（**1次**）
+60. 地方（**1次**）
+61. 长崎（**1次**）
 62. 奈良公园
-63. 小（的）
+63. 小 (A1)
 
 ## じゅうに
 
