--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -577,3 +577,58 @@
 42. 空、饿（V1）
 43. 肚子饿。
 44. 新年
+
+## じゅうよん
+
+1. 等（V1）
+2. 拿（V1）
+3. 名字
+4. 读法、念法
+5. ~ 法
+6. 告诉（V2）
+7. 地址
+8. 告诉地址。
+9. 开（V2）
+10. 开窗户。
+11. 说话（V1）
+12. 再、又
+13. 回头、一会儿
+14. 下（雨、雪）（V1）
+15. 下雨。
+16. 绿町（虚构的城市）
+17. 到红绿灯处往右拐。
+18. 一直
+19. 停、止（V2）
+20. 给您（钱）。
+21. （找）零钱
+22. 练习题、问题
+23. 回答
+24. 急、急忙（V1）
+25. 盐
+26. 取（V1）
+27. 慢慢地、充分、安稳
+28. 帮忙（V1）
+29. 关（门、窗等）(V2)
+30. 关门。
+31. 护照
+32. 显示，给 ~ 看（V2）
+33. 复印（V3）
+34. 空调
+35. 开（空调、电灯等）（V2）
+36. 开空调。
+37. 再 ~ 一点儿、还一点儿
+38. 再 ~、还 ~
+39. 进（V1）
+40. 进咖啡馆。
+41. 出（V2）
+42. 出咖啡馆。
+43. 坐（V1）
+44. 站（V1）
+45. 使用（V1）
+46. 关（空调、电灯等）（V1）
+47. 电灯、电气
+48. 地图
+49. 马上
+50. 叫（V1）
+51. 喂（提议、催促做某事时使用）
+52. 哎呀！咦？
