--- a/助詞.md
+++ b/助詞.md
@@ -11,6 +11,9 @@
 ## の
 
 1. N + の + N
+   1. 日本**の**コンピューターですか
+2. N(物、人、场所) + の + N（位置）
+   1. 机の上に写真があります
 
 ## に
 
@@ -19,8 +22,22 @@
 2. 授受关系动词「あげます、貸します、教えます」时，表示**方向**
    1. 木村さん**に**花をあげました
    2. 山田さん**に**花をもらいました
+3. 物和人存在的场所用，助词**に**表示
+   1. 私の部屋**に**机があります
+   2. 事務所**に**ミラーさんがいます
+4. 表示**频度**的用法。数量词**に** -回 动词。
+   1. 一か月**に**二回映画を見ます
+5. 目的。名词（场所）へ 动词ます形|名词 **に** 行きます、来ます、帰ります
+   1. 神戸へ　インド料理を　食べ**に**　行きます
+   2. 日本へ　美術の勉強**に**　来ました
 
 ## から　まで
+
+1. 从...到...
+   1. 3時から5時までです
+2. 表示原因
+   1. 時間がありませんから、新聞を読みません
+
 ## と
 
 1. N + **と** + N
@@ -43,6 +60,9 @@
    1. 箸**で**食べます
 4. 使用了别的语言
    1. 「ありがとう」は英語**で**何ですか
+5. 表示范围。名词1 の中　**で**　何｜どこ｜だれ｜いつ　が　一番　形容词　ですか
+   1. 日本料理の中**で** 何が一番美味しいですか
+   2. 家族**で**誰が一番背が高いですか
 
 ## を
 
@@ -50,5 +70,29 @@
    1. ジュースを飲みます
 
 ## が
-## 
-## 
+
+1. 形容词和一部分动词的**宾语**用「が」来表示
+   1. 私はイタリア料理**が**好きです
+
+## や
+
+1. 选择几个（两个以上）的名词加以列举，有时会加上**など**，更为明确地表示除了列举的以外还有别的名词
+   1. 箱の中に手紙**や**写真(など)があります
+
+## だけ
+
+1. 数量词だけ/名词だけ，意思是只有这些，不会再有超过于此的了。
+   1. パワー電気に外国人の社員が一人**だけ**います
+   2. 休みは日曜日**だけ**です
+
+## より
+
+1. N1 と　N2 **より**　形容词 です
+   1. この車はあの車**より**大きいです
+   2. 林檎**より**蜜柑**のほうが**ずっと大きいです
+
+## どこか｜何が
+
+1. 表不确定性。
+   1. 冬休みは**どこか**行きましたか
+   2. 喉が渇きましたから、**何か**飲みたいです
