--- a/動詞活用.md
+++ b/動詞活用.md
@@ -16,7 +16,7 @@
    1. [い｜ち｜り] 后接 [って]
    2. [み｜び｜に] 后接　[んで]
    3. [き｜ぎ] 后接　[いて、いで]
-      1. [いきます] 后接　[いって]
+      1. 特殊 [いきます] 后接　[いって]
    4. [し] 后接　[て]
 2. 二类动词
    1. [ます] 后接　[て]
