--- a/動詞活用.md
+++ b/動詞活用.md
@@ -12,13 +12,32 @@
 
 ## 二 [て]形
 
+原型变法
+
 1. 一类动词
+
+| 最后一个音节 | 变法   | 举例         |
+| ------------ | ------ | ------------ |
+| う、つ、る   | 促音变 | [って]       |
+| む、ぶ、ぬ   | 拨音变 | [んで]       |
+| く、ぐ       | い音变 | [いて、いで] |
+| す           | して   | [して]       |
+
+2. 二类动词
+   - 去[る]加[て]
+     > 食べて、みて、見せて
+3. 三类动词
+   1. 来ます　 → きて
+   2. します　 → して
+
+<!-- ます形变法 不常用 -->
+<!-- 1. 一类动词
    1. [い｜ち｜り] 后接 [って]
    2. [み｜び｜に] 后接　[んで]
    3. [き｜ぎ] 后接　[いて、いで]
       1. 特殊 [いきます] 后接　[いって]
    4. [し] 后接　[て]
-2. 二类动词
+1. 二类动词
    1. [ます] 后接　[て]
-3. 三类动词
-   1. [ます] 后接　[て]
+2. 三类动词
+   1. [ます] 后接　[て] -->
