--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -237,19 +237,19 @@
 7. 奈良
 8. 新干线
 9. 什么时候
-10. 几月
+10. 几月（特殊）（**1次**）
 11. 几号
-12. 生日
+12. 生日（**1次**）
 13. 电车
 14. 甲子园
 15. 非常感谢。（过去式）
 16. 别客气。（**1次**）
 17. 第 \- 站台
 18. 下一个
-19. 慢车（**1次**）
-20. 急行（快车）（**1次**）
-21. 特快、特急车（**1次**）
-22. 超市 super（**1次**）
+19. 慢车、普通（**2次**）
+20. 急行（快车）（**2次**）
+21. 特快、特急车（**2次**）
+22. 超市 super（**2次**）
 23. 公共汽车 bus（**1次**）
 24. 地铁
 25. 自行车
@@ -267,7 +267,7 @@
 37. 她、女朋友
 38. 他、男朋友
 39. 人
-40. 一个人、自己（副词）
+40. 一个人、自己（副词）（**1次**）
 41. 3号
 42. 14号
 43. 明年
@@ -275,7 +275,7 @@
 45. 这周
 46. 去年
 47. 几年
-48. 大阪城
+48. 大阪城（**1次**）
 49. 六号
 50. 十号
 51. 九号
@@ -288,19 +288,19 @@
 58. 七号
 59. 二十号
 60. 二十四号
-61. 今年
+61. 今年（特殊）（**1次**）
 
 ## ろく
 
 1. 读（V1）
 2. 买（V1）
-3. 一起（副词）（**1次**）
-4. 一会儿、一点儿（副词）（**1次**）
+3. 一起（副词）（**2次**）
+4. 一会儿、一点儿（副词）（**2次**）
 5. 酒、日本酒
 6. 喝（V1）
 7. 什么
 8. 吃（V2）
-9. 面包（葡 pao）（**1次**）
+9. 面包（葡 pao）（**2次**）
 10. 鸡蛋
 11. 做、干（V3）
 12. 然后
@@ -316,8 +316,8 @@
 22. 水果
 23. 肉
 24. 蔬菜
-25. 足球（**1次**）
-26. 录像带、录像机 video（**1次**）
+25. 足球（**2次**）
+26. 录像带、录像机 video（**2次**）
 27. 红茶
 28. 店（**1次**）
 29. 茶、日本茶
@@ -337,7 +337,7 @@
 43. 庭院、院子
 44. 午饭
 45. 牛奶
-46. 作业（**1次**）
+46. 作业（**2次**）
 47. 米饭、饭
 48. 啤酒
 49. 总是、经常
