--- a/単語/仅汉字.md
+++ b/単語/仅汉字.md
@@ -471,6 +471,64 @@
 62. 奈良公园
 63. 小 (A1)
 
+## きゅう
+
+1. 菜肴
+2. 喜欢（A2）
+3. 喜欢日语。
+4. 一点、一些
+5. 懂、明白（V1）
+6. 孩子
+7. 因为 ~
+8. 快、早
+9. 体育、运动 sports
+10. 画
+11. 好、擅长（A2）
+12. 完全 ~（后接否定式）
+13. 细小、零碎（A1）
+14. 零钱
+15. 有、在（V1）
+16. 时间
+17. 怎么、为什么
+18. 事情
+19. 古典音乐 classic
+20. 音乐会、演唱会 concert
+21. 一起来怎么样？
+22. 有点儿…… （委婉拒绝）
+23. 不行、不好（A2）
+24. 不行吗？
+25. 维持遗憾，不过 ~
+26. 约定
+27. 下次、这次、上次
+28. 下次在请多多关照把。
+29. 平假名
+30. 字
+31. 汉字
+32. 舞 dance
+33. 卡拉OK
+34. 旅行
+35. 棒球
+36. 饮料
+37. 爵士乐 jazz
+38. 音乐
+39. 歌
+40. 片假名
+41. 罗马字
+42. 很
+43. 大致、大略
+44. 别人的妻子
+45. 临时工 Arbeit（德）
+46. 自己的妻子
+47. 不好、不擅长（A2）
+48. 别人的丈夫
+49. 自己的丈夫
+50. 不喜欢（A2）
+51. 很多
+52. 请借给我吧。
+53. 可以。
+54. 票 ticket
+55. 歌舞伎
+
 ## じゅうに
 
 1. 雨
