--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -159,3 +159,32 @@
 50. 叫（V1）
 51. 喂（提议、催促做某事时使用）
 52. 哎呀！咦？
+
+## じゅうご
+
+1. 电子词典
+2. 名录 catalog
+3. 知道（V1）
+4. 住、居住（V1）
+5. 住在北京。
+6. 单身
+7. 专业
+8. 高中
+9. 想起（V1）
+10. 有、在（V1）（います的敬语）
+11. 放（V1）
+12. 资料
+13. 产品
+14. 电子产品
+15. 卖（V1）
+16. 日本桥（大阪的商业地区）
+17. 做、制造
+18. 软件 soft
+19. 计算机软件
+20. 研究（V3）
+21. 经济
+22. 压抑
+23. 市政府
+24. 大家
+25. 大家的采访（虚构的电视节目）
+26. 衣服
