--- a/動詞活用.md
+++ b/動詞活用.md
@@ -1,5 +1,15 @@
 # 動詞活用
 
+1. 一类。
+   1. 不以[**る**]结尾
+   2. 特殊的一类动词（符合二类动词特征，实质是一类动词）[帰る、入る、ある、切る、要る...]
+2. 二类。
+   1. 以[**る**]结尾
+   2. 倒数第二个假名在[**え**]和[**い**]上
+3. 三类。
+   1. くる
+   2. する
+
 ## 一 [たい]形
 
 - 去掉 [ます] 接 [たい]
