--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -123,40 +123,40 @@
 14. 下（雨、雪）（V1）
 15. 下雨。
 16. 绿町（虚构的城市）
-17. 到红绿灯处往右拐。
-18. 一直
+17. 到红绿灯处往右拐。（**1次**）
+18. 一直（**1次**）
 19. 停、止（V2）
-20. 给您（钱）。
-21. （找）零钱
-22. 练习题、问题
-23. 回答
-24. 急、急忙（V1）
-25. 盐
-26. 取（V1）
-27. 慢慢地、充分、安稳
-28. 帮忙（V1）
-29. 关（门、窗等）(V2)
-30. 关门。
-31. 护照
-32. 显示，给 ~ 看（V2）
-33. 复印（V3）
-34. 空调
-35. 开（空调、电灯等）（V2）
-36. 开空调。
-37. 再 ~ 一点儿、还一点儿
-38. 再 ~、还 ~
-39. 进（V1）
-40. 进咖啡馆。
-41. 出（V2）
-42. 出咖啡馆。
-43. 坐（V1）
-44. 站（V1）
-45. 使用（V1）
-46. 关（空调、电灯等）（V1）
-47. 电灯、电气
-48. 地图
-49. 马上
-50. 叫（V1）
+20. （找）零钱
+21. 练习题、问题
+22. 回答（**1次**）
+23. 急、急忙（V1）
+24. 盐
+25. 取（V1）
+26. 慢慢地、充分、安稳（**1次**）
+27. 帮忙（V1）（**1次**）
+28. 关（门、窗等）(V2)（**1次**）
+29. 关门。
+30. 护照
+31. 显示，给 ~ 看（V2）
+32. 复印（V3）
+33. 空调
+34. 开（空调、电灯等）（V2）（**1次**）
+35. 开空调。
+36. 再 ~ 一点儿、还一点儿（**1次**）
+37. 再 ~、还 ~
+38. 进（V1）
+39. 进咖啡馆。
+40. 出（V2）
+41. 出咖啡馆。
+42. 坐（V1）
+43. 站（V1）
+44. 使用（V1）
+45. 关（空调、电灯等）（V1）
+46. 电灯、电气（**1次**）
+47. 地图
+48. 马上（**1次**）
+49. 叫（V1）
+50. 砂糖
 51. 喂（提议、催促做某事时使用）
 52. 哎呀！咦？
 
