--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -4,9 +4,9 @@
 2. 北海道 （**2次**）
 3. 比 ~
 4. 夏天
-5. 最
+5. 最（AD）
 6. 晚会、派对
-7. ~ 得多 （**1次**）
+7. ~ 得多 （AD）（**1次**）
 8. 机场
 9. 哪一个
 10. 快、早
@@ -42,7 +42,7 @@
 40. 甜
 41. 春天（**1次**）
 42. 秋天（**1次**）
-43. 初次
+43. 初次（AD）
 44. 寿司
 45. 插花
 46. 柠檬
@@ -64,7 +64,7 @@
 2. 暑假
 3. 冲绳（**1次**）
 4. 累(V2)
-5. 很（累人），不好的状态(A2)
+5. 很（累人），不好的状态 (A2)
 6. 周末（**1次**）
 7. 美术
 8. 寒假
@@ -75,7 +75,7 @@
 13. 您点什么？
 14. 套餐
 15. 牛肉盖饭
-16. 稍微
+16. 稍微（AD）
 17. 请稍等。（**1次**）
 18. です的礼貌用语
 19. 结婚（V3）
@@ -103,7 +103,7 @@
 41. 肚子（**1次**）
 42. 空、饿（V1）
 43. 肚子饿。
-44. 新年
+44. 新年、正月
 
 ## じゅうよん
 
@@ -115,46 +115,46 @@
 6. 告诉（V2）
 7. 地址
 8. 告诉地址。
-9. 开（V2）
-10. 开窗户。
-11. 说话（V1）
-12. 再、又
-13. 回头、一会儿
-14. 下（雨、雪）（V1）
-15. 下雨。
-16. 绿町（虚构的城市）
-17. 到红绿灯处往右拐。（**1次**）
-18. 一直（**1次**）
-19. 停、止（V2）
-20. （找）零钱
-21. 练习题、问题
-22. 回答（**1次**）
-23. 急、急忙（V1）
-24. 盐
-25. 取（V1）
-26. 慢慢地、充分、安稳（**1次**）
-27. 帮忙（V1）（**1次**）
-28. 关（门、窗等）(V2)（**1次**）
-29. 关门。
-30. 护照
-31. 显示，给 ~ 看（V2）
-32. 复印（V3）
-33. 空调
-34. 开（空调、电灯等）（V2）（**1次**）
-35. 开空调。
-36. 再 ~ 一点儿、还一点儿（**1次**）
-37. 再 ~、还 ~
-38. 进（V1）
-39. 进咖啡馆。
-40. 出（V2）
-41. 出咖啡馆。
-42. 坐（V1）
-43. 站（V1）
-44. 使用（V1）
-45. 关（空调、电灯等）（V1）
-46. 电灯、电气（**1次**）
-47. 地图
-48. 马上（**1次**）
+9.  说话（V1）
+10. 再、又（AD）
+11. 回头、一会儿（AD）
+12. 一直（AD）（**1次**）
+13. 慢慢地、充分、安稳（AD）（**1次**）
+14. 马上（AD）（**1次**）
+15. 再 ~ 一点儿、还一点儿（AD）（**1次**）
+16. 再 ~、还 ~
+17. 下（雨、雪）（V1）
+18. 下雨。
+19. 绿町（虚构的城市）
+20. 到红绿灯处往右拐。（**1次**）
+21. 停、止（V2）
+22. （找）零钱
+23. 练习题、问题
+24. 回答（**1次**）
+25. 急、急忙（V1）
+26. 盐
+27. 取（V1）
+28. 开（V2）
+29. 开窗户。
+30. 帮忙（V1）（**1次**）
+31. 关（门、窗等）(V2)（**1次**）
+32. 关门。
+33. 护照
+34. 显示，给 ~ 看（V2）
+35. 复印（V3）
+36. 空调
+37. 开（空调、电灯等）（V2）（**1次**）
+38. 开空调。
+39. 关（空调、电灯等）（V1）
+40. 进（V1）
+41. 进咖啡馆。
+42. 出（V2）
+43. 出咖啡馆。
+44. 坐（V1）
+45. 站（V1）
+46. 使用（V1）
+47. 电灯、电气（**1次**）
+48. 地图
 49. 叫（V1）
 50. 砂糖
 51. 喂（提议、催促做某事时使用）
@@ -178,13 +178,81 @@
 14. 电子产品
 15. 卖（V1）
 16. 日本桥（大阪的商业地区）
-17. 做、制造
+17. 做、制造（V1）
 18. 软件 soft
 19. 计算机软件
 20. 研究（V3）
 21. 经济
-22. 压抑
+22. 牙医
 23. 市政府
 24. 大家
 25. 大家的采访（虚构的电视节目）
 26. 衣服
+
+## じゅうろく
+
+1. 慢跑 jogging
+2. 淋浴 shower
+3. 浇、淋（V2）
+4. 淋浴。
+5. 明亮（A1）
+6. 昏暗（A1）
+7. 怎么 ~（询问怎么做时用）
+8. 乘、坐（V1）
+9. 乘电车。
+10. 大学前（虚构的车站）
+11. 下（车）（V2）
+12. 下电车。
+13. 参观（V3）
+14. 哪个（的） ~ （有三个以上的东西时）
+15. 头发
+16. 脸
+17. 长（A1）
+18. 哪个（有三个的东西时）
+19. 您是取钱吗？
+20. 首先
+21. 按、押、推（V1）
+22. 其次
+23. 提款卡、借记卡 cash card
+24. 放入、插入（V2）
+25. 密码
+26. 金额
+27. 确认
+28. 按键、开关 （葡batao）
+29. 个子
+30. 个子高。
+31. 眼睛
+32. 耳朵
+33. 鼻子
+34. 嘴巴
+35. 牙齿
+36. 肚子
+37. 脚、腿
+38. 头、脑子
+39. 聪明。
+40. 身体
+41. 短（A1）
+42. 年轻（A1）
+43. *梅田（大阪的街名）*
+44. *JR(日本铁道公司)*
+45. 换乘（V2）
+46. 取（钱）（V1）
+47. 取款。
+48. 开始（V2）
+49. 拿出、取出、提交、寄（V1）
+50. 打电话（V3）
+51. 冰雪节
+52. 服务 service
+53. 寺庙
+54. 真了不起。真棒。
+55. 【不】、还差的远呢。
+56. 万隆（印尼）
+57. 绿色、绿树绿草
+58. 维拉克鲁斯（墨西哥）
+59. 弗兰肯（德国）
+60. 上（学）、进（公司）（V1）
+61. 上大学。
+62. 出去、离开（V2）
+63. 大学毕业。
+64. 神社
+65. 喝（特指酒）
