--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -1,3 +1,70 @@
+## じゅういち
+
+1. 7个
+2. 年
+3. 在、有（V2）
+4. 在日本。
+5. 有孩子。
+6. 苹果
+7. 多少
+8. 4个
+9. 邮票
+10. 枚、张
+11. 明信片
+12. 一共、合计
+13. 外国
+14. ~ 个人
+15. 几个人
+16. 全部、大家（AD）
+17. 兄弟姐妹
+18. 4个人
+19. （自己的）姐姐
+20. （别人的）姐姐
+21. （自己的）哥哥
+22. （别人的）哥哥
+23. 一个人
+24. 两个人
+25. ~ 周
+26. ~ 次
+27. 左右、大约（AD）
+28. 多长时间
+29. ~ 个月
+30. 只、仅 ~ （AD）
+31. 花费（V1）
+32. 出门啊？
+33. 到 ~ 去一下。
+34. 走好。
+35. 我出门了。
+36. 澳大利亚
+37. 平邮、海运
+38. 航邮、空运
+39. 橘子
+40. 5个
+41. 8个
+42. 10个
+43. 班级 class
+44. 留学生
+45. ~ 小时
+46. 3个
+47. 1个
+48. 2个
+49. 6个
+50. ~ 台
+51. 信封
+52. 9个
+53. 请假（V1）
+54. 跟公司请假。
+55. 三明治 sandwich
+56. 明白了。（服务行业的人对顾客的礼貌用语）
+57. 咖喱
+58. 冰淇淋 ice cream
+59. （自己的）弟弟
+20. （别人的）弟弟
+21. （自己的）妹妹
+22. （别人的）妹妹
+23. 鹿儿岛
+24. 父母、两亲
+
 ## じゅうに
 
 1. 雨
