--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -249,12 +249,13 @@
 18. 软件 soft
 19. 计算机软件
 20. 研究（V3）
-21. 经济
-22. 牙医
-23. 市政府
-24. 大家
-25. 大家的采访（虚构的电视节目）
-26. 衣服
+21. 经济（**1次**）
+22. 时刻表
+23. 牙医
+24. 市政府
+25. 大家
+26. 大家的采访（虚构的电视节目）
+27. 衣服
 
 ## じゅうろく
 
