--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -1,6 +1,6 @@
 ## じゅういち
 
-1. 7个
+1. 7个（**1次**）
 2. 年
 3. 在、有（V2）
 4. 在日本。
@@ -10,32 +10,32 @@
 8. 4个
 9. 邮票
 10. 枚、张
-11. 明信片
+11. 明信片（**1次**）
 12. 一共、合计
 13. 外国
 14. ~ 个人
 15. 几个人
 16. 全部、大家（AD）
 17. 兄弟姐妹
-18. 4个人
-19. （自己的）姐姐
+18. 4个人（**1次**）
+19. （自己的）姐姐（**1次**）
 20. （别人的）姐姐
 21. （自己的）哥哥
 22. （别人的）哥哥
-23. 一个人
+23. 一个人（**1次**）
 24. 两个人
-25. ~ 周
-26. ~ 次
+25. ~ 周间
+26. ~ 次、回
 27. 左右、大约（AD）
 28. 多长时间
-29. ~ 个月
+29. ~ 个月（**1次**）
 30. 只、仅 ~ （AD）
 31. 花费（V1）
-32. 出门啊？
-33. 到 ~ 去一下。
-34. 走好。
+32. 出门啊？（**1次**）
+33. 到 ~ 去一下。（**1次**）
+34. 走好。（**1次**）
 35. 我出门了。
-36. 澳大利亚
+36. 澳大利亚（**1次**）
 37. 平邮、海运
 38. 航邮、空运
 39. 橘子
@@ -43,26 +43,26 @@
 41. 8个
 42. 10个
 43. 班级 class
-44. 留学生
+44. 留学生（**1次**）
 45. ~ 小时
 46. 3个
-47. 1个
+47. 1个（**1次**）
 48. 2个
-49. 6个
+49. 6个（**1次**）
 50. ~ 台
-51. 信封
+51. 信封（**1次**）
 52. 9个
 53. 请假（V1）
 54. 跟公司请假。
 55. 三明治 sandwich
 56. 明白了。（服务行业的人对顾客的礼貌用语）
 57. 咖喱
-58. 冰淇淋 ice cream
-59. （自己的）弟弟
+58. 冰淇淋 ice cream（**1次**）
+59. （自己的）弟弟（**1次**）
 20. （别人的）弟弟
-21. （自己的）妹妹
+21. （自己的）妹妹（**1次**）
 22. （别人的）妹妹
-23. 鹿儿岛
+23. 鹿儿岛（**1次**）
 24. 父母、两亲
 
 ## じゅうに
@@ -259,7 +259,7 @@
 
 ## じゅうろく
 
-1. 慢跑 jogging
+1. 慢跑 jogging（**1次**）
 2. 淋浴 shower
 3. 浇、淋（V2）
 4. 淋浴。
@@ -275,18 +275,18 @@
 14. 哪个（的） ~ （有三个以上的东西时）
 15. 头发
 16. 脸
-17. 长（A1）
+17. 长（A1）（**1次**）
 18. 哪个（有三个的东西时）
-19. 您是取钱吗？
+19. 您是取钱吗？（**1次**）
 20. 首先
 21. 按、押、推（V1）
 22. 其次
-23. 提款卡、借记卡 cash card
-24. 放入、插入（V2）
-25. 密码
-26. 金额
+23. 提款卡、借记卡 cash card（**1次**）
+24. 放入、插入（V2）（**1次**）
+25. 密码（**1次**）
+26. 金额（**1次**）
 27. 确认
-28. 按键、开关 （葡batao）
+28. 按键、开关 （葡batao）（**1次**）
 29. 个子
 30. 个子高。
 31. 眼睛
@@ -298,26 +298,26 @@
 37. 脚、腿
 38. 头、脑子
 39. 聪明。
-40. 身体
+40. 身体（**1次**）
 41. 短（A1）
-42. 年轻（A1）
+42. 年轻（A1）（**1次**）
 43. *梅田（大阪的街名）*
-44. *JR(日本铁道公司)*
-45. 换乘（V2）
-46. 取（钱）（V1）
+44. JR(日本铁道公司)
+45. 换乘（V2）（**1次**）
+46. 取（钱）（V1）（**1次**）
 47. 取款。
 48. 开始（V2）
 49. 拿出、取出、提交、寄（V1）
 50. 打电话（V3）
 51. 冰雪节
-52. 服务 service
-53. 寺庙
+52. 服务 service（**1次**）
+53. 寺庙（**1次**）
 54. 真了不起。真棒。
 55. 【不】、还差的远呢。
-56. 万隆（印尼）
+56. *万隆（印尼）*
 57. 绿色、绿树绿草
-58. 维拉克鲁斯（墨西哥）
-59. 弗兰肯（德国）
+58. *维拉克鲁斯（墨西哥）*
+59. *弗兰肯（德国）*
 60. 上（学）、进（公司）（V1）
 61. 上大学。
 62. 出去、离开（V2）
