--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -324,3 +324,46 @@
 63. 大学毕业。
 64. 神社
 65. 喝（特指酒）
+
+## じゅうなな
+
+1. 没问题、不要紧（A2）
+2. 担心（V3）
+3. 因此
+4. 付钱（V1）
+5. 付钱。
+6. 到 ~ 为止（时间期限）
+7. 怎么了？
+8. 嗓子
+9. 疼（A1）
+10. 喉咙疼。
+11. 发烧
+12. 发烧了。
+13. 感冒
+14. 两三天
+15. 出差（V3）
+16. 药
+17. 吃药。
+18. 还有
+19. 洗澡、澡盆
+20. 进、入、洗澡
+21. 洗澡。
+22. 珍贵、重要（A2）
+23. 多保重。
+24. 忘记（V2）
+25. 归还、返回（V1）
+26. 加班（V3）
+27. 脱（V1）
+28. 脱鞋。
+29. 禁烟
+30. 危险（A1）
+31. 重要（A2）
+32. 丢失（V1）
+33. 记住（V2）
+34. 带去、拿去（V1）
+35. 出门、外出（V2）
+36. 疾病
+37. 健康保险证
+38. 带来、拿来（V3）
+39. 外套
+40. 内衣
