--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -330,7 +330,7 @@
 1. 没问题、不要紧（A2）
 2. 担心（V3）
 3. 因此
-4. 付钱（V1）
+4. 付钱（V1）（**1次**）
 5. 付钱。
 6. 到 ~ 为止（时间期限）
 7. 怎么了？
@@ -345,25 +345,25 @@
 16. 药
 17. 吃药。
 18. 还有
-19. 洗澡、澡盆
+19. 洗澡、澡盆（**1次**）
 20. 进、入、洗澡
 21. 洗澡。
 22. 珍贵、重要（A2）
 23. 多保重。
 24. 忘记（V2）
-25. 归还、返回（V1）
-26. 加班（V3）
+25. 归还、返回（V1）（**1次**）
+26. 加班（V3）（**1次**）
 27. 脱（V1）
 28. 脱鞋。
 29. 禁烟
 30. 危险（A1）
 31. 重要（A2）
-32. 丢失（V1）
+32. 丢失（V1）（**1次**）
 33. 记住（V2）
 34. 带去、拿去（V1）
 35. 出门、外出（V2）
 36. 疾病
-37. 健康保险证
+37. 健康保险证（**1次**）
 38. 带来、拿来（V3）
 39. 外套
-40. 内衣
+40. 内衣（**1次**）
