--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -367,3 +367,70 @@
 38. 带来、拿来（V3）
 39. 外套
 40. 内衣（**1次**）
+
+## じゅうはち
+
+1. 能、会、可以（V2）
+2. 爱好
+3. 日记
+4. 驾驶（V3）
+5. 汽车驾驶
+6. 现金
+7. 收集（V2）
+8. 动物
+9. 特别（AD）
+10. 马
+11. 后接否定式，表示（不）轻易、（不）容易、（不）简单（AD）
+12. 真的吗？
+13. 一定（AD）
+14. 钢琴 piano
+15. 弹凑、弹 （V1）
+16. 弹钢琴。
+17. 预定（V3）
+18. 预约酒店
+19. 换（V2）
+20. 洗（V1）
+21. \- 米 （法 metre）
+22. 唱（V1）
+23. 故乡
+24. 因特网、互联网
+25. 秋叶原
+26. 祈愿、祈祷
+27. 部长
+28. 科长
+29. 社长、总经理
+30. 丢弃、扔（V2）
+
+## じゅうく
+
+1. 相扑
+2. 日子
+3. 渐渐（AD）
+4. 变成、成为（V1）
+5. 一次（名词、AD）
+6. 后接否定式，表示一次也没有（AD）
+7. 茶
+8. 情况、状态
+9. 情况好
+10. 情况不好
+11. 托您的福
+12. 减肥
+13. 干杯（V3）
+14. 不过
+15. 勉强（A2）
+16. 对身体好。
+17. 登、上（V1）
+18. 东京晴空塔
+19. 住（V1）
+20. 住酒店。
+21. 打扫（V3）
+22. 洗衣服（V3）
+23. 高尔夫
+24. 练习
+25. 强（A1）
+26. 弱（A1）
+27. 困（A1）
+28. 马上（AD）
+29. 静冈县
+30. 山梨县
+31. 葛饰北斋（江户时代有名的浮世绘画家）
