--- a/動詞活用.md
+++ b/動詞活用.md
@@ -10,7 +10,7 @@
    1. くる
    2. する
 
-## 一 [たい]形
+<!-- ## 一 [たい]形
 
 - 去掉 [ます] 接 [たい]
   > 買います　 → 買いたい
@@ -18,9 +18,11 @@
 
 | ます   | たい   | 否定       | 过去             |
 | ------ | ------ | ---------- | ---------------- |
-| します | したい | したくない | 　したくなかった |
+| します | したい | したくない | 　したくなかった | -->
 
-## 二 [て]形
+## 一 [て]形
+
+> 14 - 16课
 
 原型变法
 
@@ -51,3 +53,26 @@
    1. [ます] 后接　[て]
 2. 三类动词
    1. [ます] 后接　[て] -->
+
+## 二 [ない]形
+
+> 17课
+
+1. 一类动词
+   1. 最后一个变[あ]段加[ない]
+   2. 特殊：以[う]变[わ]
+2. 二类动词
+   1. 去[る]加[ない]
+3. 三类动词
+   1. する　→ しない
+   2. くる　→ **こない**　（特殊）
+
+## 三 字典形、原形
+
+> 18课
+
+## 四 [た]形
+
+> 19课
+
+1. 变法同[て形](#一-て形)
