--- a/助詞.md
+++ b/助詞.md
@@ -1,5 +1,7 @@
 # 助詞
 
+> 整理到19课
+
 ## は
 
 1. 提示主语
@@ -17,8 +19,8 @@
 
 ## に
 
-1. 具体时间
-   1. 6時半**に**おきます
+1. **具体时间**
+   1. 6 時半**に**おきます
 2. 授受关系动词「あげます、貸します、教えます」时，表示**方向**
    1. 木村さん**に**花をあげました
    2. 山田さん**に**花をもらいました
@@ -27,14 +29,21 @@
    2. 事務所**に**ミラーさんがいます
 4. 表示**频度**的用法。数量词**に** -回 动词。
    1. 一か月**に**二回映画を見ます
-5. 目的。名词（场所）へ 动词ます形|名词 **に** 行きます、来ます、帰ります
+5. **目的**。名词（场所）へ 动词ます形|名词 **に** 行きます、来ます、帰ります
    1. 神戸へ　インド料理を　食べ**に**　行きます
    2. 日本へ　美術の勉強**に**　来ました
+6. 可以和「入ります」「乗ります」「登ります」等动词一起使用，表示**主语因某一动作的结果而存在于某一场所**
+   1. ここ**に**入ってはいけません
+   2. ここ**に**座ってもいいですか
+   3. 京都駅から十六番のバス**に**乗ってください
+7. 表示**动作的结果或名词2存在的场所（名词1）**
+   1. ここ**に**車を止めてください
+   2. ここ**に**住所を書いてください
 
 ## から　まで
 
 1. 从...到...
-   1. 3時から5時までです
+   1. 3 時から 5 時までです
 2. 表示原因
    1. 時間がありませんから、新聞を読みません
 
@@ -52,15 +61,15 @@
 
 ## で
 
-1. 表示手段方法，接在**交通工具**后
+1. **表示手段方法**，接在**交通工具**后
    1. 電車**で**行きます
 2. 名词（场所） **で** 动词，表示**动作发生的场所**
    1. 駅**で**新聞で買います
-3. 表示手段、方法、工具
+3. **表示手段、方法、工具**
    1. 箸**で**食べます
-4. 使用了别的语言
+4. 使用了**别的语言**
    1. 「ありがとう」は英語**で**何ですか
-5. 表示范围。名词1 の中　**で**　何｜どこ｜だれ｜いつ　が　一番　形容词　ですか
+5. **表示范围**。名词 1 の中　**で**　何｜どこ｜だれ｜いつ　が　一番　形容词　ですか
    1. 日本料理の中**で** 何が一番美味しいですか
    2. 家族**で**誰が一番背が高いですか
 
@@ -68,11 +77,21 @@
 
 1. 他动词的宾语用助词 **を** 表示
    1. ジュースを飲みます
+2. 名词**を**动词。这个**を**表示起点、出发点
+   1. 7時にうち**を**出ます。
+   2. えめだで電車**を**降りました。
 
 ## が
 
 1. 形容词和一部分动词的**宾语**用「が」来表示
    1. 私はイタリア料理**が**好きです
+2. 把自己的五官（眼睛、耳朵等）所感的某种现象直接说出来，或客观地传达某件事情时，主语用助词「が」表示
+   1. 雨**が**降っています。
+   2. ミラーさん**が**いませんね。
+3. 表示句子的主题具有[名词2が形容词]的性质
+   1. 大阪は食べ物**が**美味しいです。
+   2. ドイツのフランケンはワイン**が**有名です。
+   3. マリアさんは髪**が**長いです
 
 ## や
 
@@ -87,7 +106,7 @@
 
 ## より
 
-1. N1 と　N2 **より**　形容词 です
+1. N1 と　 N2 **より**　形容词 です
    1. この車はあの車**より**大きいです
    2. 林檎**より**蜜柑**のほうが**ずっと大きいです
 
@@ -96,3 +115,12 @@
 1. 表不确定性。
    1. 冬休みは**どこか**行きましたか
    2. 喉が渇きましたから、**何か**飲みたいです
+
+## までに
+
+1. 表示动作、事情的期限
+   1. 会議は5時**までに**終わります。
+   2. 土曜日**までに**本を返さなければなりません。
+   3. 5時までに働きます。
+
+
