--- a/単語/1-10.md
+++ b/単語/1-10.md
@@ -423,7 +423,7 @@
 14. 旧 (A1)
 15. 方便 (A2)（**1次**）
 16. ~ ，但是 ~
-17. 很久但很方便
+17. 很旧但很方便
 18. 什么样的 ~
 19. 于是（**1次**）
 20. 有意思 (A1)
@@ -449,7 +449,7 @@
 40. 安静 (A2)（**1次**）
 41. 亲切 (A2)
 42. 热 (A1)
-43. 有时间、有空儿
+43. 有时间、有空儿 (A2)
 44. 新、新鲜 (A1)
 45. 容易、温柔 (A1)
 46. 英俊、美男子 (A2)
