--- a/単語/1-10.md
+++ b/単語/1-10.md
@@ -529,3 +529,56 @@
 54. 票 ticket（**1次**）
 55. 歌舞伎
 
+## じゅう
+
+1. 便利店
+2. 有、在（不会活动）
+3. 有、在（会活动）
+4. 东京迪士尼乐园
+5. 县
+6. 自动柜员机 ATM
+7. 男人
+8. 猫
+9. 箱子
+10. 中间、里面
+11. 外面
+12. 什么的、等、多个以上
+13. 附近
+14. 前
+15. 鱼酱 namplaa
+16. 亚洲超市
+17. 商店 store
+18. 柜台 corner
+19. 最下边
+20. 下
+21. 高楼
+22. 公园
+23. 女人
+24. 旁边
+25. 咖啡馆
+26. 右
+27. 左
+28. 信箱 post
+29. 门 door
+30. 开关 switch
+31. 树木
+32. 男孩儿
+33. 女孩儿
+34. 冰箱
+35. 各种各样（A2）
+36. 东西
+37. 上
+38. 桌子 table
+39. 床 bed
+40. 窗
+41. 后
+42. 狗
+43. ~ 站
+44. 熊猫 panda
+45. 大象
+46. ~ 店
+47. 礼品店
+48. 电池
+49. 书店
+50. 之间
+51. 架子
