--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -1,6 +1,6 @@
 ## じゅういち
 
-1. 7个（**1次**）
+1. 7个（**2次**）
 2. 年
 3. 在、有（V2）
 4. 在日本。
@@ -10,60 +10,60 @@
 8. 4个
 9. 邮票
 10. 枚、张
-11. 明信片（**1次**）
+11. 明信片（**2次**）
 12. 一共、合计
-13. 外国
+13. 外国（**1次**）
 14. ~ 个人
 15. 几个人
 16. 全部、大家（AD）
 17. 兄弟姐妹
 18. 4个人（**1次**）
 19. （自己的）姐姐（**1次**）
-20. （别人的）姐姐
+20. （别人的）姐姐（**1次**）
 21. （自己的）哥哥
-22. （别人的）哥哥
+22. （别人的）哥哥（**1次**）
 23. 一个人（**1次**）
 24. 两个人
 25. ~ 周间
 26. ~ 次、回
-27. 左右、大约（AD）
-28. 多长时间
+27. 左右、大约（AD）（**1次**）
+28. 多长时间（**1次**）
 29. ~ 个月（**1次**）
 30. 只、仅 ~ （AD）
 31. 花费（V1）
-32. 出门啊？（**1次**）
+32. 出门啊？（**2次**）
 33. 到 ~ 去一下。（**1次**）
-34. 走好。（**1次**）
-35. 我出门了。
+34. 走好。（**2次**）
+35. 我出门了。（**1次**）
 36. 澳大利亚（**1次**）
-37. 平邮、海运
-38. 航邮、空运
+37. 平邮、海运（**1次**）
+38. 航邮、空运（**1次**）
 39. 橘子
 40. 5个
-41. 8个
+41. 8个（**1次**）
 42. 10个
 43. 班级 class
-44. 留学生（**1次**）
+44. 留学生（**2次**）
 45. ~ 小时
 46. 3个
 47. 1个（**1次**）
 48. 2个
 49. 6个（**1次**）
 50. ~ 台
-51. 信封（**1次**）
+51. 信封（**2次**）
 52. 9个
 53. 请假（V1）
-54. 跟公司请假。
+54. 跟公司请假。（**1次**）
 55. 三明治 sandwich
-56. 明白了。（服务行业的人对顾客的礼貌用语）
+56. 明白了。（服务行业的人对顾客的礼貌用语）（**1次**）
 57. 咖喱
-58. 冰淇淋 ice cream（**1次**）
-59. （自己的）弟弟（**1次**）
-20. （别人的）弟弟
-21. （自己的）妹妹（**1次**）
-22. （别人的）妹妹
-23. 鹿儿岛（**1次**）
-24. 父母、两亲
+58. 冰淇淋 ice cream（**2次**）
+59. （自己的）弟弟（**2次**）
+60. （别人的）弟弟
+61. （自己的）妹妹（**2次**）
+62. （别人的）妹妹
+63. 鹿儿岛（**2次**）
+64. 父母、两亲
 
 ## じゅうに
 
