--- a/助詞.md
+++ b/助詞.md
@@ -77,7 +77,7 @@
 
 1. 他动词的宾语用助词 **を** 表示
    1. ジュースを飲みます
-2. 名词**を**动词。这个**を**表示起点、出发点
+2. 名词**を**动词。这个**を**表示起点、出发点（离开的场所）
    1. 7時にうち**を**出ます。
    2. えめだで電車**を**降りました。
 
