--- a/単語/1-10.md
+++ b/単語/1-10.md
@@ -354,55 +354,55 @@
 
 1. 电脑
 2. 花
-3. 给、给出（V2）
-4. 得到（V1）
+3. 给、给出（V2）（**1次**）
+4. 得到（V1）（**1次**）
 5. 电子邮件
-6. 再见
+6. 再见。（**1次**）
 7. 贺年卡
 8. 已经
 9. 已经6点了啊。
-10. 车票
+10. 车票（**1次**）
 11. 还、尚未
-12. 现在（马上去做某事）
+12. 现在（马上去做某事）（**1次**）
 13. 欢迎。
-14. 请进。
-15. 打扰了。
-16. ~ 怎么样？
+14. 请进。（**1次**）
+15. 打扰了（失礼了）。（**1次**）
+16. ~ （您觉得）怎么样？（**1次**）
 17. 我开动了。
-18. 我吃好了。
+18. 我吃好了。（**1次**）
 19. 勺子
 20. ~ 真棒啊。
 21. 筷子
-22. 叉子
-23. 刀子
+22. 叉子（**1次**）
+23. 刀子（**1次**）
 24. 西班牙
 25. 行李、包裹
-26. 寄、送（V1）
-27. 礼物
+26. 寄、送（V1）（**1次**）
+27. 礼物（**1次**）
 28. 纸
-29. 切、剪（V1）
+29. 切、剪（V1）（**1次**）
 30. 剪刀
 31. 手
-32. 手机
+32. 手机（**1次**）
 33. 打孔机
-34. 透明胶带
-35. 订书机
+34. 透明胶带（**1次**）
+35. 订书机（**1次**）
 36. 橡皮
 37. 借给、借出（V1）
 38. 借钱给小李
-39. 借入（V2）
+39. 借入（V2）（**1次**）
 40. 向小王借书
 41. 教、告诉（V2）
 42. 教学生日语
-43. 学习、学进来（V1）
+43. 学习、学进来（V1）（**1次**）
 44. （自己的）母亲
 45. （自己的）父亲
 46. 衬衫
-47. 打（电话）（V2）
+47. 打（电话）（V2）（**1次**）
 48. 钱
-49. （别人的）母亲
-50. （别人的）父亲
-51. 圣诞节
+49. （别人的）母亲（**1次**）
+50. （别人的）父亲（**1次**）
+51. 圣诞节（**1次**）
 52. 圣诞贺卡
 
 ## はち
