--- a/単語/1-10.md
+++ b/単語/1-10.md
@@ -440,14 +440,14 @@
 31. 再来一杯 ~ 怎么样？
 32. 【不】、已经够了，谢谢（**1次**）
 33. 又、再（**1次**）
-34. 请再来。
-35. 好 (A1)（**1次**）
+34. 请再来。（**1次**）
+35. 好 (A1)
 36. 坏 (A1)（**1次**）
 37. 健康、元气（A2）（**1次**）
 38. 好吃、美味 (A1)
 39. 市镇、街道
 40. 安静 (A2)（**1次**）
-41. 亲切 (A2)
+41. 亲切 (A2)（**1次**）
 42. 热 (A1)
 43. 有时间、有空儿 (A2)
 44. 新、新鲜 (A1)
