--- a/単語/10-20.md
+++ b/単語/10-20.md
@@ -389,17 +389,17 @@
 17. 预定（V3）
 18. 预约酒店
 19. 换（V2）
-20. 洗（V1）
+20. 洗（V1）（**1次**）
 21. \- 米 （法 metre）
 22. 唱（V1）
-23. 故乡
-24. 因特网、互联网
+23. 故乡（**1次**）
+24. 因特网、互联网（**1次**）
 25. 秋叶原
 26. 祈愿、祈祷
 27. 部长
 28. 科长
 29. 社长、总经理
-30. 丢弃、扔（V2）
+30. 丢弃、扔（V2）（**1次**）
 
 ## じゅうく
 
@@ -420,17 +420,39 @@
 15. 勉强（A2）
 16. 对身体好。
 17. 登、上（V1）
-18. 东京晴空塔
-19. 住（V1）
+18. 东京晴空塔（**1次**）
+19. 住（V1）（**1次**）
 20. 住酒店。
 21. 打扫（V3）
-22. 洗衣服（V3）
+22. 洗衣服（V3）（**1次**）
 23. 高尔夫
-24. 练习
+24. 练习（**1次**）
 25. 强（A1）
 26. 弱（A1）
 27. 困（A1）
-28. 马上（AD）
-29. 静冈县
-30. 山梨县
+28. 马上（AD）（**1次**）
+29. 静冈县（**1次**）
+30. 山梨县（**1次**）
 31. 葛饰北斋（江户时代有名的浮世绘画家）
+
+## にじゅう
+
+1. 我（男子用语，比 わたし 随意）
+2. 你（用于同辈、部下、晚辈，比 あなた 随意）
+3. 嗯（比 はい 随意）
+4. 不（比 いいえ 随意）
+5. 大家一起（连语）
+6. 肚子饱了。
+7. 但是（比 が 随意）
+8. 君（用于同辈、部下、晚辈，有时在叫男孩名字时使用，比 さん 随意）
+9. 如果（你觉得）可以的话 ~
+11. 开始的时候
+12. 各种各样（AD）
+13. 调查（V2）
+14. 和服
+15. 签证
+16. 要（V1）
+17. 要签证。
+18. 结束的时候
+19. 修理（V3）
+20. 词汇、单词
