--- a/言葉/11-20.md
+++ b/言葉/11-20.md
@@ -235,7 +235,7 @@
 4. 住、居住（V1）
 5. 住在北京。
 6. 单身
-7. 专业
+7. 专业（**1次**）
 8. 高中
 9. 想起（V1）
 10. 有、在（V1）（います的敬语）
@@ -249,8 +249,8 @@
 18. 软件 soft
 19. 计算机软件
 20. 研究（V3）
-21. 经济（**1次**）
-22. 时刻表
+21. 经济（**2次**）
+22. 时刻表（**1次**）
 23. 牙医
 24. 市政府
 25. 大家
