--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -47,3 +47,107 @@
 46. 天神祭（大阪的庙会）
 47. 吉野山（位于奈良的山）
 48. 袋鼠 kangaroo
+
+## にじゅうに
+
+1. 蛋糕 cake
+2. 万里长城
+3. 穿（V2）
+4. 穿和服。
+5. 您在找 ~ 吗?
+6. 房屋中介
+7. 房租
+8. 日式房间
+9. 日式壁橱
+10. 被褥
+11. 眼镜
+12. 戴、佩戴（V2）
+13. 戴眼镜
+14. 巴黎
+15. 帽子
+16. 大衣
+17. 穿（鞋子、裤子等）（V1）
+18. 穿鞋。
+19. 穿、戴（V3）
+20. 系领带。
+21. 戴（帽子等）（V1）
+22. 戴帽子。
+23. 出生（V2）
+24. 盒饭、便当
+25. 我们
+26. 幽默 humour
+27. 机器人 robot
+28. 方便、凑巧
+29. 毛衣 sweater
+30. 套装 suits
+31. 祝你 ~ 快乐
+32. 成人礼
+
+## にじゅうさん
+
+1. 健康茶（虚构）
+2. 热水、开水
+3. 找（钱）（V2）
+4. 找零钱。
+5. 本田站（虚构的车站）
+6. 第 - （指顺序）
+7. 第三个
+8. 建筑物
+9. 道路
+10. 渡过、过（V1）
+11. 过桥。
+12. 过马路。
+13. 问（V1）
+14. 问老师。
+15. 纹路。
+16. 社长
+17. 传递、传（V1）
+18. 音（物体发生的声音）
+19. 寂寞（A1）
+20. 多次、好几次
+21. 拉、拽（V1）
+22. 摸、碰（V1）
+23. 碰到门。
+24. 十字路口
+25. 停车场
+26. 桥
+27. 走（V1）
+28. 号码 size
+29. 改变（V2）
+30. 故障
+31. 红绿灯
+32. 拐、拐弯（V1）
+33. 向右拐。
+34. 拐角
+35. 法隆寺
+
+## にじゅうよん
+
+1. 给（V1）
+2. 修理、修改（V1）
+3. 送（V1）
+4. 送人。
+5. 请别人为自己做某事（动补）
+6. 别人为我做某事（动补）
+7. 为别人做某事（动补）
+8. 点心
+9. 全部
+10. 自己、本人
+11. 自己来
+12. 母亲节
+13. 搬家（V3）
+14. 另外
+15. 领着去（V1）
+16. 带着孩子去。
+17. 领着来。（V3）
+18. 介绍（V3）
+19. 介绍老师。
+20. 导游、领路（V3）
+21. 陪同参观学校。
+22. 爷爷、姥爷
+23. 爷爷、姥爷2
+24. 奶奶、姥姥
+25. 奶奶、姥姥2
+26. 准备
+27. 寄宿在当地人家里 homestay
+28. 说明、讲解（V3）
