--- a/助詞.md
+++ b/助詞.md
@@ -4,7 +4,7 @@
 
 ## は
 
-1. 提示主语
+1. 提示主语, 表话题
 
 ## も
 
@@ -106,7 +106,7 @@
 
 ## より
 
-1. N1 と　 N2 **より**　形容词 です
+1. N1 と N2 **より**　形容词 です
    1. この車はあの車**より**大きいです
    2. 林檎**より**蜜柑**のほうが**ずっと大きいです
 
