--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -14,7 +14,7 @@
 13. 有节庆活动。
 14. 好久不见。
 15. 喝点儿 ~ 什么吗
-16. 啤酒什么的
+16. 啤酒什么的。
 17. 比赛
 18. 赢（V1）
 19. 输（V2）
@@ -30,7 +30,7 @@
 29. 设计 design
 30. 有用、起作用（V1）
 31. 汽车
-32. 漫画
+32. 动画
 33. 交通
 34. 梦、梦想
 35. 地球
