--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -151,3 +151,23 @@
 26. 准备
 27. 寄宿在当地人家里 homestay
 28. 说明、讲解（V3）
+
+## にじゅうご
+
+1. 如果、要是
+2. 亿
+3. 考虑（V2）
+4. 意思
+5. 调动工作
+6. 事情
+7. 承蒙关照了。
+8. 加油、努力（V1）
+9. 请多保重。祝你健康
+10. 乡下、老家
+11. 到、到达（V1）
+12. 够（V2）
+13. 机会 chance
+14. 上（年纪）（V1）
+15. 上年纪。
+16. 喂（打电话时）
+17. 越南
