--- a/言葉/11-20.md
+++ b/言葉/11-20.md
@@ -443,16 +443,16 @@
 4. 不（比 いいえ 随意）
 5. 大家一起（连语）
 6. 肚子饱了。
-7. 但是（比 が 随意）
+7. 但是（比 が 随意）（**1次**）
 8. 君（用于同辈、部下、晚辈，有时在叫男孩名字时使用，比 さん 随意）
 9. 如果（你觉得）可以的话 ~
 11. 开始的时候
 12. 各种各样（AD）
-13. 调查（V2）
+13. 调查（V2）（**1次**）
 14. 和服
 15. 签证
 16. 要（V1）
-17. 要签证。
+17. 要签证。（**1次**）
 18. 结束的时候
 19. 修理（V3）
 20. 词汇、单词
