--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -7,29 +7,29 @@
 5. 新闻
 6. 关于（副助）
 7. 物价
-8. 辉夜姬（日本传说《竹取物语》中的主人公）
+8. 辉夜姬（日本传说《竹取物语》中的主人公）（**1次**）
 9. 月亮
 10. 意见
 11. 浪费（A2）
 13. 有节庆活动。
 14. 好久不见。
 15. 喝点儿 ~ 什么吗
-16. 啤酒什么的。
+16. 啤酒什么的。（**1次**）
 17. 比赛
 18. 赢（V1）
 19. 输（V2）
-20. 当然 (AD)
+20. 当然 (AD)（**1次**）
 21. 最近
-22. 该回去了。
+22. 该回去了。（**1次**）
 23. 漫画
 24. 真的
 25. 假话
 26. 辞职（V2）
 27. 跟公司辞职。
-28. 一定、必定（AD）
-29. 设计 design
+28. 一定、必定（AD）（**1次**）
+29. 设计 design（**1次**）
 30. 有用、起作用（V1）
-31. 汽车
+31. 汽车（**1次**）
 32. 动画
 33. 交通
 34. 梦、梦想
@@ -37,51 +37,51 @@
 36. 转动、动（V1）
 37. 天才
 38. 话、谈话
-39. 没那么（后接否定式）
+39. 没那么（后接否定式）（**1次**）
 40. 厉害（A1）
 41. 真的（AD）
 42. 小心、注意（V2）
 43. 不方便（A2）
-44. 广播
+44. 广播（**1次**）
 45. 游乐园
 46. 天神祭（大阪的庙会）
-47. 吉野山（位于奈良的山）
-48. 袋鼠 kangaroo
+47. 吉野山（位于奈良的山）（**1次**）
+48. 袋鼠 kangaroo（**1次**）
 
 ## にじゅうに
 
 1. 蛋糕 cake
-2. 万里长城
+2. 万里长城（**1次**）
 3. 穿（V2）
-4. 穿和服。
+4. 穿和服。（**1次**）
 5. 您在找 ~ 吗?
 6. 房屋中介
-7. 房租
+7. 房租（**1次**）
 8. 日式房间
-9. 日式壁橱
-10. 被褥
+9. 日式壁橱（**1次**）
+10. 被褥（**1次**）
 11. 眼镜
 12. 戴、佩戴（V2）
 13. 戴眼镜
 14. 巴黎
 15. 帽子
-16. 大衣
+16. 大衣（**1次**）
 17. 穿（鞋子、裤子等）（V1）
 18. 穿鞋。
 19. 穿、戴（V3）
 20. 系领带。
-21. 戴（帽子等）（V1）
+21. 戴（帽子等）（V1）（**1次**）
 22. 戴帽子。
 23. 出生（V2）
-24. 盒饭、便当
-25. 我们
+24. 盒饭、便当（**1次**）
+25. 我们（**1次**）
 26. 幽默 humour
-27. 机器人 robot
-28. 方便、凑巧
+27. 机器人 robot（**1次**）
+28. 方便、凑巧（**1次**）
 29. 毛衣 sweater
-30. 套装 suits
-31. 祝你 ~ 快乐
-32. 成人礼
+30. 套装 suits（**1次**）
+31. 祝你 ~ 快乐（**1次**）
+32. 成人礼（**1次**）
 
 ## にじゅうさん
 
