--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -87,39 +87,39 @@
 
 1. 健康茶（虚构）
 2. 热水、开水
-3. 找（钱）（V2）
+3. 找（钱）（V2）（**1次**）
 4. 找零钱。
 5. 本田站（虚构的车站）
 6. 第 - （指顺序）
 7. 第三个
 8. 建筑物
 9. 道路
-10. 渡过、过（V1）
+10. 渡过、过（V1）（**1次**）
 11. 过桥。
 12. 过马路。
 13. 问（V1）
 14. 问老师。
-15. 纹路。
+15. 问路。
 16. 社长
-17. 传递、传（V1）
+17. 传递、传（V1）（**1次**）
 18. 音（物体发生的声音）
 19. 寂寞（A1）
-20. 多次、好几次
+20. 多次、好几次（**1次**）
 21. 拉、拽（V1）
 22. 摸、碰（V1）
-23. 碰到门。
+23. 碰到门。（**1次**）
 24. 十字路口
 25. 停车场
 26. 桥
 27. 走（V1）
 28. 号码 size
 29. 改变（V2）
-30. 故障
-31. 红绿灯
-32. 拐、拐弯（V1）
+30. 故障（**1次**）
+31. 红绿灯（**1次**）
+32. 拐、拐弯（V1）（**1次**）
 33. 向右拐。
-34. 拐角
-35. 法隆寺
+34. 拐角（**1次**）
+35. 法隆寺（**1次**）
 
 ## にじゅうよん
 
