--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -171,3 +171,110 @@
 15. 上年纪。
 16. 喂（打电话时）
 17. 越南
+
+## にじゅうろく
+
+1. 方言
+2. 大阪话、大阪方言
+3. 晚了、没赶上（V2）
+4. 没赶上时间。
+5. 看、诊断（V2）
+6. 国会议事堂
+7. 直接
+8. 平日
+9. 随时
+10. 垃圾
+11. 扔（V1）
+12. 扔垃圾。
+13. 收拾（V1）
+14. 收拾行李。
+15. 可燃垃圾
+16. 放置场所
+17. 垃圾场
+18. 旁边
+19. 瓶
+20. 罐
+21. 煤气
+22. 煤气公司
+23. 联系（V3）
+24. 运动会
+25. 时机不好，不方便
+26. 极其、相当（AD）
+27. 做、干、搞（V1）
+28. 孟兰盆会舞
+29. 钱包
+30. 舒服
+31. 不舒服
+32. 赶上（V1）
+33. 赶上时间。
+34. 这次、下次
+35. 拾、捡（V1）
+36. 场所
+37. 寻找（V1）
+38. 义工 volunteer
+39. 宇宙
+40. 宇宙飞船
+41. 害怕、可怕（A1）
+42. 宇宙station
+43. 不一样（V1）
+44. 宇航员
+
+## にじゅうなな
+
+TODO
+
+## にじゅうはち
+
+1. 口香糖
+2. 嚼、咬（V1）
+3. 嚼口香糖。
+4. 一会儿、不久（AD）
+5. 伟大的、了不起（A1）
+6. 大部分、大体、普通（AD）
+7. 热心（A2）
+8. 而且
+9. 经验
+10. 选择（V1）
+11. 有件事想麻烦一下。
+12. 实际上（AD）
+13. 会话
+14. 自己的儿子
+15. 别人的儿子
+16. 自己的女儿
+17. 别人的女儿
+18. 认真（A2）
+19. 力量
+20. 价钱
+21. 味道
+22. 跳舞（V1）
+23. 记笔记（V3）
+24. 游戏 game
+25. 节目
+26. 电视剧 drama
+27. 上（学）、定期往返（V1）
+28. 上大学。
+29. 美容院
+30. 厨房
+31. 形状、样子
+32. 颜色
+33. 物品、商品
+34. 正好
+35. 景色
+36. 卖的好、畅销（V2）
+37. 面包卖的好。
+38. 歌手
+39. 受欢迎、有人缘
+40. 奖金
+41. 工资
+42. 将来
+43. 小说家
+44. 小说
+45. 自己
+46. 因此
+47. 通知
+48. 参加（V3）
+49. 日期
+50. 体育馆
+51. 免费
+52. 劝诱、邀请（V1）
+53. 活动 event
