--- a/動詞活用.md
+++ b/動詞活用.md
@@ -1,12 +1,12 @@
 # 動詞活用
 
-1. 一类。
+1. 一类动词。
    1. 不以[**る**]结尾
    2. 特殊的一类动词（符合二类动词特征，实质是一类动词）[帰る、入る、ある、切る、要る...]
-2. 二类。
+2. 二类动词。
    1. 以[**る**]结尾
    2. 倒数第二个假名在[**え**]和[**い**]上
-3. 三类。
+3. 三类动词。
    1. くる
    2. する
 
@@ -22,18 +22,18 @@
 
 ## 一 [て]形
 
-> 14 - 16课
+> 14 - 16 课
 
 原型变法
 
 1. 一类动词
 
-| 最后一个音节 | 变法   | 举例         |
-| ------------ | ------ | ------------ |
-| う、つ、る   | 促音变 | [って]       |
-| む、ぶ、ぬ   | 拨音变 | [んで]       |
-| く、ぐ       | い音变 | [いて、いで] |
-| す           | して   | [して]       |
+   | 最后一个音节 | 变法   | 举例         |
+   | ------------ | ------ | ------------ |
+   | う、つ、る   | 促音变 | [って]       |
+   | む、ぶ、ぬ   | 拨音变 | [んで]       |
+   | く、ぐ       | い音变 | [いて、いで] |
+   | す           | して   | [して]       |
 
 2. 二类动词
    - 去[る]加[て]
@@ -56,23 +56,59 @@
 
 ## 二 [ない]形
 
-> 17课
+> 17 课
 
 1. 一类动词
    1. 最后一个变[あ]段加[ない]
    2. 特殊：以[う]变[わ]
+   3. ある　 → **ない**　（特殊）
 2. 二类动词
    1. 去[る]加[ない]
 3. 三类动词
-   1. する　→ しない
-   2. くる　→ **こない**　（特殊）
+   1. する　 → しない
+   2. くる　 → **こない**　（特殊）
 
-## 三 字典形、原形
+## 三 [辞書]形、原形
 
-> 18课
+> 18 课
+
+
+### 相关文型
+
+1. 名词/辞書形こと が　できます。
+   1. ミラさんは日本語ができます。
+   2. ミラさんは漢字を読むことができます。
+2. 私の趣味は　名词/辞書形こと　です。
+   1. 私の趣味は音楽です。
+   2. 私の趣味は音楽を聞くことです。
+3. 动词1辞書形/名词の/数量词（期间）　前に、动词2
+   1. 日本へ来る前に、日本語を勉強します。
+   2. 食事の前に、手を洗います。
+   3. 田中さんは１時間前に、出かけました。
 
 ## 四 [た]形
 
-> 19课
+> 19 课
 
-1. 变法同[て形](#一-て形)
+1. 活用方法同[て形](#一-て形)
+
+## 五 简体形
+
+> 20 课
+
+通常与礼貌形对应
+
+- 活用方法
+
+  |         | 现在肯定      | 现在否定           | 过去肯定         | 过去否定                 |
+  | ------- | ------------- | ------------------ | ---------------- | ------------------------ |
+  | イ      | 高い~~です~~  | 高くない~~です~~   | 高かった~~です~~ | 高くなかった~~です~~     |
+  | ナ/名詞 | きれい**だ**  | きれい**じゃない** | きれい**だった** | きれい**じゃなかった**   |
+  | 動詞    | 書く （辞書） | 書かない （ない）  | 書いた（た）     | 書かなかった（なかった） |
+
+- 特殊的動詞
+
+  |      | 现在肯定 | 现在否定 | 过去肯定 | 过去否定   |
+  | ---- | -------- | -------- | -------- | ---------- |
+  | 来る | くる     | こない   | きた     | 来なかった |
+  | ある | ある     | ない     | あった   | なかった   |
