--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -124,7 +124,7 @@
 ## にじゅうよん
 
 1. 给（V1）
-2. 修理、修改（V1）
+2. 修理、修改（V1）（**1次**）
 3. 送（V1）
 4. 送人。
 5. 请别人为自己做某事（动补）
@@ -136,20 +136,20 @@
 11. 自己来
 12. 母亲节
 13. 搬家（V3）
-14. 另外
+14. 另外（**1次**）
 15. 领着去（V1）
 16. 带着孩子去。
 17. 领着来。（V3）
 18. 介绍（V3）
 19. 介绍老师。
 20. 导游、领路（V3）
-21. 陪同参观学校。
+21. 陪同参观学校。（**1次**）
 22. 爷爷、姥爷
 23. 爷爷、姥爷2
 24. 奶奶、姥姥
 25. 奶奶、姥姥2
-26. 准备
-27. 寄宿在当地人家里 homestay
+26. 准备（**1次**）
+27. 寄宿在当地人家里 homestay（**1次**）
 28. 说明、讲解（V3）
 
 ## にじゅうご
