--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -155,15 +155,15 @@
 ## にじゅうご
 
 1. 如果、要是
-2. 亿
+2. 亿（**1次**）
 3. 考虑（V2）
 4. 意思
-5. 调动工作
+5. 调动工作（**1次**）
 6. 事情
 7. 承蒙关照了。
-8. 加油、努力（V1）
+8. 加油、努力（V1）（**1次**）
 9. 请多保重。祝你健康
-10. 乡下、老家
+10. 乡下、老家（**1次**）
 11. 到、到达（V1）
 12. 够（V2）
 13. 机会 chance
