--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -221,7 +221,55 @@
 
 ## にじゅうなな
 
-TODO
+1. 清楚地（AD）
+2. 看见（V2）
+3. 看见山。
+4. 建好、交上（朋友）、做好（饭）（V2）
+5. 建好道路。
+6. 鸟
+7. （人或动物）声音
+8. 听见（V2）
+9. 听见声音。
+10. 只（助词）后接否定式
+11. 公寓 mansion
+12. 宠物 pet
+13. 饲养（V1）
+14. 养狗。
+15. 家具
+16. 书架
+17. 什么时候
+18. 家、住宅
+19. 建造、盖（V2）
+20. 很棒、很好（A1）
+21. 烟花
+22. 跑、奔驰（V1）
+23. 在路上奔跑。
+24. 担心（A2）
+25. 波浪
+26. 洗、洗衣 cleaning
+27. 其他的
+29. 开、举办（V1）
+30. 开设教室。
+31. 厨房 kitchen
+32. 工具、道具
+33. 宴会厅 party room
+34. 人（尊敬语）
+35. 1小时后
+36. 自己
+37. 孩子们
+38. 非常喜欢（A2）
+39. 主人公
+40. 形状、样子
+41. 不可思议（A2）
+42. 口袋、兜 pocket
+43. 例如（AD）
+44. 戴上（V2）
+45. 自由地（AD）
+46. 天空
+47. 飞、飞翔（A1）
+48. 过去、以前
+49. 将来
+50. 任意门
 
 ## にじゅうはち
 
@@ -278,3 +326,68 @@ TODO
 51. 免费
 52. 劝诱、邀请（V1）
 53. 活动 event
+
+## にじゅうく
+
+1. 关着(门)（A1）
+2. 门关着。
+3. 上着（锁）（A1）
+4. 上着锁。
+5. 请先走把。
+6. 弄错（V2）
+7. 遗失物品
+8. 刚发车的电车。
+9. 这样大小的
+10. 外侧
+11. 带有（V1）
+12. 带有口袋。
+13. 哪边
+14. 不记得了。
+15. 行李架（网做的）
+16. 似乎是、大概是（AD）
+17. 新宿
+18. 开着（V1）
+19. 门开着。
+20. 停了、停着（V1）
+21. 车停着。
+22. 玻璃 glass
+23. 碎了（V2）
+24. 杯子碎了。
+25. 袋子
+26. 破了（V2）
+27. 纸破了。
+28. 折断（V2）
+29. 树枝折断了。
+30. 《源氏物语》
+31. 落下（V1）
+32. 坏了（V2）
+33. 椅子坏了。
+34. 盘子、碟子
+35. 饭碗、茶碗
+36. 树枝
+37. 开着（V1）
+38. 灯开着。
+39. 脏了（V2）
+40. 衣服脏了。
+41. 擦（V1）
+42. 更换（V2）
+43. 杯子 （荷kop）
+44. 演讲 speech
+45. 收拾（V2）
+46. 回信
+47. 掉了（V2）
+48. 纽扣掉了。
+49. 派出所
+50. 文件、材料
+51. 站务员
+52. 关着
+53. 灯关着。
+54. 地震
+55. 墙壁
+56. （钟表的）走针
+57. 指在 ~ （V1）
+58. 车站前
+59. 倒下来、倒塌（V2）
+60. 西
+61. 燃烧（V2）
+62. 采访记者 reporter
