--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -391,3 +391,59 @@
 60. 西
 61. 燃烧（V2）
 62. 采访记者 reporter
+
+## さんじゅう
+
+1. 贴（V1）
+2. 抽屉
+3. 收拾整理（V1）
+4. 以前、过去、原来
+5. 原处
+6. 返还、还原
+7. 原来的状态
+8. 保持原状（V3）
+9. 还（AD）
+10. 还在使用。
+11. 应急备用包
+12. 帆布背包
+13. 非常时
+14. 生活（V3）
+15. 手电
+16. ~ 啦、~ 啦
+17. 预定
+18. 挂（V2）
+19. 把画挂在墙壁上。
+20. 排列（V2）
+21. 角落
+22. 计划表
+23. 决定（V2）
+24. 决定名字。
+25. 偶人
+26. 装饰（V1）
+27. 镜子
+28. 花瓶
+29. 正中间
+30. 种植（V2）
+31. 植树。
+32. 周围
+33. 课程、课
+34. 预习（V3）
+35. 复习（V3）
+36. 讲义、上课
+37. 收拾（行李）、完成（报告）（V2）
+38. 通知
+39. 走廊
+40. 玄关
+41. 圆的（A1）
+42. 做梦（V2）
+43. 高兴（A1）
+44. 讨厌（A2）
+45. 于是
+46. 醒来（V2）
+47. 睁眼（V2）
+48. 池塘、水池
+49. 月历 calendar
+50. 入门书 guide book
+51. 海报 poster
+52. 会议 meeting
+53. 某天
