--- a/動詞活用.md
+++ b/動詞活用.md
@@ -24,7 +24,7 @@
 
 > 14 - 16 课
 
-原型变法
+动词，原型变法
 
 1. 一类动词
 
@@ -54,6 +54,32 @@
 2. 三类动词
    1. [ます] 后接　[て] -->
 
+- 动词，[て]形
+- い 形容词，去掉　い　加　くて
+- ナ 形容词 -> で
+- N 形容词 -> で
+
+### 文法
+
+1. [て]形 ください
+2. [て]形　います
+3. [て]形も　いいですか
+4. [て]形は　いけません
+5. 多个[て]，按动作发生的顺序，连接在一起。
+   1. V -> [て]形
+   2. イ -> 去掉　い　加　くて
+   3. ナ -> で
+   4. N -> で
+6. [て]形から、其他动词。先做前面的[て]再做后面的动作
+7. [て]形 くれます。
+   1. 表示说话人感到自己因那一行为而受益的心情
+8. [て]も、主句。即使 …… 也（要做主句的事）……
+   1. V 肯定 -> [て]形
+   2. V 否定 -> [ない]形なくて
+   3. イ -> 去掉　い　加　くて
+   4. ナ -> で
+   5. N -> で
+
 ## 二 [ない]形
 
 > 17 课
@@ -68,6 +94,14 @@
    1. する　 → しない
    2. くる　 → **こない**　（特殊）
 
+### 文法
+
+1. [ない]形でください
+2. [ない]形なければなりません
+3. [ない]形なくてもいいです
+4. [ない]形と
+   1. [ない]形と　＝＝＝　[ない]形いけません　＝＝＝　[ない]形なければなりません
+
 ## 三 [辞書]形、原形
 
 > 18 课
@@ -75,16 +109,20 @@
 
 ### 相关文型
 
-1. 名词/辞書形こと が　できます。
+1. 名词/[辞書形]こと が　できます。
    1. ミラさんは日本語ができます。
    2. ミラさんは漢字を読むことができます。
-2. 私の趣味は　名词/辞書形こと　です。
+2. 私の趣味は　名词/[辞書形]こと　です。
    1. 私の趣味は音楽です。
    2. 私の趣味は音楽を聞くことです。
-3. 动词1辞書形/名词の/数量词（期间）　前に、动词2
+3. 动词1[辞書形]/名词の/数量词（期间）　前に、动词2
    1. 日本へ来る前に、日本語を勉強します。
    2. 食事の前に、手を洗います。
    3. 田中さんは１時間前に、出かけました。
+4. [辞書形] 時間｜約束｜用事。
+   1. 私は朝ごはんを**食べる時間**がありません。
+5. [辞書形]と、主句。
+   1. 表示 と 之前的动作只要一发生，主句表示的状态、动作、现象、事态就必然会发生。
 
 ## 四 [た]形
 
@@ -92,7 +130,13 @@
 
 1. 活用方法同[て形](#一-て形)
 
-## 五 简体形
+### 相关文型
+
+1. [た]形ことがあります
+2. 动词1[た]形り、 动词2[た]形り　**します**。
+   1. 表示列举，动作没有先后关系
+
+## 五 [普通型]、简体形
 
 > 20 课
 
@@ -112,3 +156,29 @@
   | ---- | -------- | -------- | -------- | ---------- |
   | 来る | くる     | こない   | きた     | 来なかった |
   | ある | ある     | ない     | あった   | なかった   |
+
+- が　→ けど
+- ません　→ ない
+
+### 相关文型
+
+1. [普通型] と　思います
+2. [普通型]　と　言います
+3. [普通型]　でしょう？
+   1. [普通型] V 和 イ，正常普通型
+   2. [普通型] ナ 和 N，不加 だ
+4. [普通型]修饰名词。
+5. とき。同简体形修饰名词，但是没有过去否定的形式。
+   1. V [辞書形]
+   2. V ない
+   3. V [た]形，表示**从句的动作先发生**。
+      1. バリへ行ったとき、カバンを買いました。去巴黎时，（在途中）买了一个包
+      2. バリへ行くとき、カバンを買いました。去巴黎时，在那边买了个包
+   4. い 形容词
+   5. な 形容词 ＋ な
+   6. 名词 の
+6. [普通型]过去ら、主句
+   1. V 肯定，[た]形
+   2. V 否定，なかったら
+   3. イ，かったら
+   4. ナ｜N，だったら
