--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -177,33 +177,33 @@
 1. 方言
 2. 大阪话、大阪方言
 3. 晚了、没赶上（V2）
-4. 没赶上时间。
+4. 没赶上时间。（**1次**）
 5. 看、诊断（V2）
 6. 国会议事堂
-7. 直接
-8. 平日
-9. 随时
+7. 直接（**1次**）
+8. 平日（**1次**）
+9. 随时（AD）（**1次**）
 10. 垃圾
 11. 扔（V1）
 12. 扔垃圾。
-13. 收拾（V1）
-14. 收拾行李。
-15. 可燃垃圾
+13. 收拾（V1）（**1次**）
+14. 收拾行李。（**1次**）
+15. 可燃垃圾（**1次**）
 16. 放置场所
 17. 垃圾场
 18. 旁边
-19. 瓶
-20. 罐
+19. 瓶（**1次**）
+20. 罐（**1次**）
 21. 煤气
 22. 煤气公司
-23. 联系（V3）
+23. 联系（V3）（**1次**）
 24. 运动会
 25. 时机不好，不方便
 26. 极其、相当（AD）
 27. 做、干、搞（V1）
-28. 孟兰盆会舞
+28. 孟兰盆会舞（**1次**）
 29. 钱包
-30. 舒服
+30. 舒服（**1次**）
 31. 不舒服
 32. 赶上（V1）
 33. 赶上时间。
@@ -211,7 +211,7 @@
 35. 拾、捡（V1）
 36. 场所
 37. 寻找（V1）
-38. 义工 volunteer
+38. 义工 volunteer（**1次**）
 39. 宇宙
 40. 宇宙飞船
 41. 害怕、可怕（A1）
@@ -225,7 +225,7 @@
 2. 看见（V2）
 3. 看见山。
 4. 建好、交上（朋友）、做好（饭）（V2）
-5. 建好道路。
+5. 建好道路。（**1次**）
 6. 鸟
 7. （人或动物）声音
 8. 听见（V2）
@@ -237,7 +237,7 @@
 14. 养狗。
 15. 家具
 16. 书架
-17. 什么时候
+17. 什么时候(AD)（**1次**）
 18. 家、住宅
 19. 建造、盖（V2）
 20. 很棒、很好（A1）
@@ -246,9 +246,9 @@
 23. 在路上奔跑。
 24. 担心（A2）
 25. 波浪
-26. 洗、洗衣 cleaning
+26. 洗、洗衣 cleaning（**1次**）
 27. 其他的
-29. 开、举办（V1）
+29. 开、举办（V1）（**1次**）
 30. 开设教室。
 31. 厨房 kitchen
 32. 工具、道具
@@ -256,73 +256,73 @@
 34. 人（尊敬语）
 35. 1小时后
 36. 自己
-37. 孩子们
+37. 孩子们（**1次**）
 38. 非常喜欢（A2）
-39. 主人公
+39. 主人公（**1次**）
 40. 形状、样子
-41. 不可思议（A2）
-42. 口袋、兜 pocket
+41. 不可思议（A2）（**1次**）
+42. 口袋、兜 pocket（**1次**）
 43. 例如（AD）
-44. 戴上（V2）
+44. 戴上（V2）（**1次**）
 45. 自由地（AD）
 46. 天空
 47. 飞、飞翔（A1）
 48. 过去、以前
-49. 将来
+49. 将来（**1次**）
 50. 任意门
 
 ## にじゅうはち
 
 1. 口香糖
-2. 嚼、咬（V1）
+2. 嚼、咬（V1）（**1次**）
 3. 嚼口香糖。
-4. 一会儿、不久（AD）
+4. 一会儿、不久（AD）（**1次**）
 5. 伟大的、了不起（A1）
-6. 大部分、大体、普通（AD）
+6. 大部分、大体、普通（AD）（**1次**）
 7. 热心（A2）
 8. 而且
 9. 经验
-10. 选择（V1）
-11. 有件事想麻烦一下。
+10. 选择（V1）（**1次**）
+11. 有件事想麻烦一下。（**1次**）
 12. 实际上（AD）
 13. 会话
 14. 自己的儿子
 15. 别人的儿子
-16. 自己的女儿
+16. 自己的女儿（**1次**）
 17. 别人的女儿
 18. 认真（A2）
 19. 力量
 20. 价钱
 21. 味道
-22. 跳舞（V1）
+22. 跳舞（V1）（**1次**）
 23. 记笔记（V3）
-24. 游戏 game
-25. 节目
-26. 电视剧 drama
-27. 上（学）、定期往返（V1）
+24. 游戏 game（**1次**）
+25. 节目（**1次**）
+26. 电视剧 drama（**1次**）
+27. 上（学）、定期往返（V1）（**1次**）
 28. 上大学。
 29. 美容院
 30. 厨房
 31. 形状、样子
 32. 颜色
 33. 物品、商品
-34. 正好
+34. 正好（**1次**）
 35. 景色
 36. 卖的好、畅销（V2）
 37. 面包卖的好。
-38. 歌手
+38. 歌手（**1次**）
 39. 受欢迎、有人缘
 40. 奖金
 41. 工资
-42. 将来
-43. 小说家
+42. 将来（**1次**）
+43. 小说家（**1次**）
 44. 小说
 45. 自己
 46. 因此
 47. 通知
 48. 参加（V3）
-49. 日期
-50. 体育馆
+49. 日期（**1次**）
+50. 体育馆（**1次**）
 51. 免费
 52. 劝诱、邀请（V1）
 53. 活动 event
