--- a/言葉/21-30.md
+++ b/言葉/21-30.md
@@ -334,53 +334,53 @@
 3. 上着（锁）（A1）
 4. 上着锁。
 5. 请先走把。
-6. 弄错（V2）
+6. 弄错（V2）（**1次**）
 7. 遗失物品
 8. 刚发车的电车。
-9. 这样大小的
-10. 外侧
+9. 这样大小的（**1次**）
+10. 外侧（**1次**）
 11. 带有（V1）
 12. 带有口袋。
 13. 哪边
-14. 不记得了。
-15. 行李架（网做的）
+14. 不记得了。（**1次**）
+15. 行李架（网做的）（**1次**）
 16. 似乎是、大概是（AD）
-17. 新宿
+17. 新宿（**1次**）
 18. 开着（V1）
 19. 门开着。
 20. 停了、停着（V1）
 21. 车停着。
 22. 玻璃 glass
-23. 碎了（V2）
+23. 碎了（V2）（**1次**）
 24. 杯子碎了。
 25. 袋子
 26. 破了（V2）
 27. 纸破了。
-28. 折断（V2）
+28. 折断（V2）（**1次**）
 29. 树枝折断了。
-30. 《源氏物语》
-31. 落下（V1）
+30. 《源氏物语》（**1次**）
+31. 落下（V1）（**1次**）
 32. 坏了（V2）
 33. 椅子坏了。
-34. 盘子、碟子
+34. 盘子、碟子（**1次**）
 35. 饭碗、茶碗
 36. 树枝
 37. 开着（V1）
 38. 灯开着。
-39. 脏了（V2）
+39. 脏了（V2）（**1次**）
 40. 衣服脏了。
 41. 擦（V1）
-42. 更换（V2）
-43. 杯子 （荷kop）
+42. 更换（V2）（**1次**）
+43. 杯子（荷kop）（**1次**）
 44. 演讲 speech
 45. 收拾（V2）
 46. 回信
-47. 掉了（V2）
+47. 掉了（V2）（**1次**）
 48. 纽扣掉了。
 49. 派出所
-50. 文件、材料
+50. 文件、材料（**1次**）
 51. 站务员
-52. 关着
+52. 关着（V2）（**1次**）
 53. 灯关着。
 54. 地震
 55. 墙壁
